--- a/laxyam/padyam/purANam/nArAyaNIyam/003.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/003.md
@@ -2,7 +2,7 @@
 title: ००३
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/003/003_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/003/003_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पठन्तो नामानि प्रमद-भर-सिन्धौ निपतिताः  
@@ -20,7 +20,7 @@ title: ००३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/003/003_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/003/003_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 **गद-क्लिष्टं** कष्टं +++(किन्तु)+++ तव **चरण-सेवा-रसभरे**  
@@ -38,7 +38,7 @@ title: ००३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/003/003_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/003/003_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कृपा ते जाता चेत् किम् इव न हि लभ्यं तनु-भृतां  
@@ -56,7 +56,7 @@ title: ००३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/003/003_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/003/003_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मुनि-प्रौढा रूढा जगति खलु गूढात्म-गतयो  
@@ -74,7 +74,7 @@ title: ००३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/003/003_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/003/003_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भवद्भक्तिः स्फीता भवतु मम सैव प्रशमये  
@@ -92,7 +92,7 @@ title: ००३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/003/003_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/003/003_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भवद्भक्तिस्तावत्प्रमुखमधुरा त्वाद्गुणरसात्  
@@ -110,7 +110,7 @@ title: ००३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/003/003_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/003/003_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विधूय क्लेशान्मे कुरु चरणयुग्मं धृतरसं  
@@ -128,7 +128,7 @@ title: ००३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/003/003_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/003/003_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रभूताधिव्याधिप्रसभचलिते मामकहृदि  
@@ -146,7 +146,7 @@ title: ००३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/003/003_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/003/003_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मरुद्गेहाधीश त्वयि खलु पराञ्चोऽपि सुखिनो  
@@ -164,7 +164,7 @@ title: ००३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/003/003_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/003/003_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 किमुक्तैर्भूयोभिस्तव हि करुणा यावदुदिया  
