--- a/laxyam/padyam/purANam/nArAyaNIyam/006.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/006.md
@@ -2,7 +2,7 @@
 title: ००६
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/006/006_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/006/006_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं चतुर्दशजगन्मयतां गतस्य  
@@ -20,7 +20,7 @@ title: ००६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/006/006_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/006/006_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जङ्घे तलातलमथो सुतलं च जानू  
@@ -38,7 +38,7 @@ title: ००६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/006/006_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/006/006_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ग्रीवा महस्तव मुखं च जनस्तपस्तु  
@@ -56,7 +56,7 @@ title: ००६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/006/006_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/006/006_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वद्ब्रह्मरन्ध्रपदमीश्वर विश्वकन्द  
@@ -74,7 +74,7 @@ title: ००६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/006/006_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/006/006_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निश्शेषविश्वरचना च कटाक्षमोक्षः  
@@ -92,7 +92,7 @@ title: ००६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/006/006_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/006/006_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 माया विलासहसितं श्वसितं समीरो  
@@ -110,7 +110,7 @@ title: ००६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/006/006_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/006/006_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पृष्ठं त्वधर्म इह देव मनस्सुधांशु  
@@ -128,7 +128,7 @@ title: ००६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/006/006_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/006/006_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रोणिस्थलं मृगगणाः पदयोर्नखास्ते  
@@ -146,7 +146,7 @@ title: ००६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/006/006_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/006/006_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 संसारचक्रमयि चक्रधर क्रियास्ते  
@@ -164,7 +164,7 @@ title: ००६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/006/006_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/006/006_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ईदृग्जगन्मयवपुस्तव कर्मभाजां  
