--- a/laxyam/padyam/purANam/nArAyaNIyam/007.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/007.md
@@ -2,7 +2,7 @@
 title: ००७
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/007/007_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/007/007_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं देव चतुर्दशात्मकजगद्रूपेण जातः पुन  
@@ -20,7 +20,7 @@ title: ००७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/007/007_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/007/007_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सोऽयं विश्विसर्गदत्तहृदयस्सम्पश्यमानस्स्वयं  
@@ -38,7 +38,7 @@ title: ००७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/007/007_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/007/007_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कोऽसौ मामवदत्पुमानिति जलापूर्णे जगन्मण्डले  
@@ -56,7 +56,7 @@ title: ००७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/007/007_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/007/007_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 माया यत्र कदापि नो विकुरुते भाते जगद्भ्यो बहि  
@@ -74,7 +74,7 @@ title: ००७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/007/007_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/007/007_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यस्मिन्नाम चतुर्भुजा हरिमणिश्यामावदातत्विषो  
@@ -92,7 +92,7 @@ title: ००७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/007/007_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/007/007_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नानादिव्यवधूजनैरभिवृता विद्युल्लतातुल्यया  
@@ -110,7 +110,7 @@ title: ००७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/007/007_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/007/007_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तत्रैवं प्रतिदर्शिते निजपदे रत्नासनाध्यासितं  
@@ -128,7 +128,7 @@ title: ००७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/007/007_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/007/007_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कालांभोदकलायकोमलरुचीचक्रेण चक्रं दिशा  
@@ -146,7 +146,7 @@ title: ००७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/007/007_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/007/007_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दृष्ट्वा संभृतसंभ्रमः कमलभूस्त्वत्पादपाथोरुहे  
@@ -164,7 +164,7 @@ title: ००७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/007/007_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/007/007_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आताम्रे चरणे विनम्रमथ तं हस्तेन हस्ते स्पृशन्  
