--- a/laxyam/padyam/purANam/nArAyaNIyam/008.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/008.md
@@ -2,7 +2,7 @@
 title: ००८
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं तावत्प्राकृतप्रक्षयान्ते  
@@ -20,7 +20,7 @@ title: ००८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सोऽयं चतुर्युगसहस्रमितान्यहानि  
@@ -38,7 +38,7 @@ title: ००८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अस्मादृशां पुनरहर्मुखकृत्यतुल्यां  
@@ -56,7 +56,7 @@ title: ००८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पञ्चाशदब्दमधुना स्ववयोऽर्धरूपम्  
@@ -74,7 +74,7 @@ title: ००८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दिनावसानेऽथ सरोजयोनिः  
@@ -92,7 +92,7 @@ title: ००८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तवैव वेषे फणिराज शेषे  
@@ -110,7 +110,7 @@ title: ००८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कालाख्यशक्तिं प्रलयावसाने  
@@ -128,7 +128,7 @@ title: ००८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चतुर्युगाणां च सहस्रमेवं  
@@ -146,7 +146,7 @@ title: ००८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विबुध्य च त्वं जलगर्भशायिन्  
@@ -164,7 +164,7 @@ title: ००८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततस्त्वदीयादयि नाभिरन्ध्रा  
@@ -182,7 +182,7 @@ title: ००८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदेतदंभोरुहकुड्मलं ते  
@@ -200,7 +200,7 @@ title: ००८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_12.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_12.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 संफुल्लपत्रे नितरां विचित्रे  
@@ -218,7 +218,7 @@ title: ००८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/008/008_13.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_13.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अस्मिन्परात्मन् ननु पद्मकल्पे  
