--- a/laxyam/padyam/purANam/nArAyaNIyam/009.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/009.md
@@ -2,7 +2,7 @@
 title: ००९
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/009/009_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/009/009_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्थितः स कमलोद्भवस्तव हि नाभिपङ्केरुहे  
@@ -20,7 +20,7 @@ title: ००९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/009/009_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/009/009_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 महार्णवविघूर्णितं कमलमेव तत्केवलं  
@@ -38,7 +38,7 @@ title: ००९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/009/009_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/009/009_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अमुष्य हि सरोरुहः किमपि कारणं सम्भवे  
@@ -56,7 +56,7 @@ title: ००९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/009/009_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/009/009_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततस्सकलनालिकाविवरमार्गगो मार्गयन्  
@@ -74,7 +74,7 @@ title: ००९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/009/009_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/009/009_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शतेन परिवत्सरैर्दृढसमाधिबन्धोल्लसत्  
@@ -92,7 +92,7 @@ title: ००९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/009/009_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/009/009_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 किरीटमुकुटोल्लसत्कटकहारकेयूरयुञ्  
@@ -110,7 +110,7 @@ title: ००९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/009/009_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/009/009_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रुतिप्रकरदर्शितप्रचुरवैभव श्रीपते  
@@ -128,7 +128,7 @@ title: ००९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/009/009_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/009/009_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 लभस्व भुवनत्रयीरचनदक्षतामक्षतां  
@@ -146,7 +146,7 @@ title: ००९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/009/009_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/009/009_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शतं कृततपास्ततः स खलु दिव्यसंवत्सरा  
@@ -164,7 +164,7 @@ title: ००९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/009/009_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/009/009_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तवैव कृपया पुनः सरसिजेन तेनैव सः  
