--- a/laxyam/padyam/purANam/nArAyaNIyam/013.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/013.md
@@ -2,7 +2,7 @@
 title: ०१३
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/013/013_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/013/013_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हिरण्याक्षं तावद्वरद भवदन्वेषणपरं  
@@ -20,7 +20,7 @@ title: ०१३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/013/013_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/013/013_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स मायावी विष्णुर्हरति भवदीयं वसुमतीं  
@@ -38,7 +38,7 @@ title: ०१३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/013/013_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/013/013_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अहो आरण्योऽयं मृग इति हसन्तं बहुतरै  
@@ -56,7 +56,7 @@ title: ०१३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/013/013_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/013/013_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गदापाणौ दैत्ये त्वमपि हि गृहीतोन्नतगदो  
@@ -74,7 +74,7 @@ title: ०१३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/013/013_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/013/013_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गदोन्मर्दे तस्मिंस्तव खलु गदायां दितिभुवो  
@@ -92,7 +92,7 @@ title: ०१३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/013/013_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/013/013_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततः शूलं कालप्रतिमरुषि दैत्ये विसृजति  
@@ -110,7 +110,7 @@ title: ०१३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/013/013_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/013/013_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भवच्चक्रज्योतिष्कणलवनिपातेन विधुते  
@@ -128,7 +128,7 @@ title: ०१३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/013/013_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/013/013_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 महाकायःस्सोऽयं तव करसरोजप्रमथितो  
@@ -146,7 +146,7 @@ title: ०१३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/013/013_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/013/013_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वचि च्छन्दो रोमस्वपि कुशगणश्चक्षुषि घृतं  
@@ -164,7 +164,7 @@ title: ०१३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/013/013_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/013/013_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मुनीन्द्रैरित्यादिस्तवनमुखरैर्मोदितमना  
