--- a/laxyam/padyam/purANam/nArAyaNIyam/014.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/014.md
@@ -2,7 +2,7 @@
 title: ०१४
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/014/014_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/014/014_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समनुस्मृततावकाङ्घ्रियुग्मः स मनुः पङ्कजसम्भवाङ्गजन्मा ।  
@@ -16,7 +16,7 @@ title: ०१४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/014/014_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/014/014_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समये खलु तत्र कर्दमाख्यो द्रुहिणच्छायभवस्तदीयवाचा ।  
@@ -30,7 +30,7 @@ title: ०१४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/014/014_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/014/014_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गरुडोपरि कालमेघकम्रं विलसत्केलिसरोजपाणिपद्मम् ।  
@@ -44,7 +44,7 @@ title: ०१४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/014/014_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/014/014_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्तुवते पुलकावृताय तस्मै मनुपुत्रीं दयितां नवापि पुत्रीः ।  
@@ -58,7 +58,7 @@ title: ०१४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/014/014_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/014/014_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स मनुश्शतरूपया महिष्या गुणवत्या सुतया च देवहूत्या ।  
@@ -72,7 +72,7 @@ title: ०१४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/014/014_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/014/014_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मनुनोपहृतां च देवहूतिं तरुणीरत्नमवाप्य कर्दमोऽसौ ।  
@@ -86,7 +86,7 @@ title: ०१४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/014/014_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/014/014_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सपुनस्त्वदुपासनप्रभावाद्दयिताकामकृते कृते विमाने ।  
@@ -100,7 +100,7 @@ title: ०१४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/014/014_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/014/014_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शतवर्षमथ व्यतीत्य सोऽयं नव कन्याः समवाप्य धन्यरूपाः ।  
@@ -114,7 +114,7 @@ title: ०१४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/014/014_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/014/014_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निजभर्तृगिरा भवन्निषेवा निरतायामथ देव देवहूत्याम् ।  
@@ -128,7 +128,7 @@ title: ०१४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/014/014_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/014/014_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वनमेयुषि कर्दमे प्रसन्ने मतसर्वस्वमुपादिशञ्जनन्यै ।  
