--- a/laxyam/padyam/purANam/nArAyaNIyam/015.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/015.md
@@ -2,7 +2,7 @@
 title: ०१५
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/015/015_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/015/015_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मतिरिह गुणसक्ता बन्धकृत्तेष्वसक्ता  
@@ -20,7 +20,7 @@ title: ०१५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/015/015_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/015/015_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रकृतिमहदहङ्काराश्च मात्राश्च भूता  
@@ -38,7 +38,7 @@ title: ०१५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/015/015_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/015/015_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रकृतिगतगुणौघैर्नाज्यते पूरुषोऽयं  
@@ -56,7 +56,7 @@ title: ०१५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/015/015_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/015/015_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विमलमतिरुपात्तैरासनाद्यैर्मदङ्गं  
@@ -74,7 +74,7 @@ title: ०१५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/015/015_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/015/015_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मम गुणगुणलीलाकर्णनैः कीर्तिनाद्यैः  
@@ -92,7 +92,7 @@ title: ०१५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/015/015_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/015/015_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अह ह बहुलहिंसासञ्चितार्थैः कुटुम्बं  
@@ -110,7 +110,7 @@ title: ०१५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/015/015_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/015/015_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 युवतिजठरखिन्नो जातबोधोऽप्यकाण्डे  
@@ -128,7 +128,7 @@ title: ०१५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/015/015_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/015/015_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पितृसुरगणयाजी धार्मिको यो गृहस्थः  
@@ -146,7 +146,7 @@ title: ०१५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/015/015_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/015/015_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इति सुविदितवेद्यां देव हे देवहूतिं  
@@ -164,7 +164,7 @@ title: ०१५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/015/015_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/015/015_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 परम किमु बहूक्त्या त्वत्पदाम्भोजभक्तिं  
