--- a/laxyam/padyam/purANam/nArAyaNIyam/016.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/016.md
@@ -2,7 +2,7 @@
 title: ०१६
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/016/016_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/016/016_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दक्षो विरिञ्चतनयोऽथ मनोस्तनूजां  
@@ -20,7 +20,7 @@ title: ०१६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/016/016_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/016/016_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मूर्तिर्हि धर्मगृहिणी सुषुवे भवन्तं  
@@ -38,7 +38,7 @@ title: ०१६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/016/016_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/016/016_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दैत्यं सहस्रकवचं कवचैः परीतं  
@@ -56,7 +56,7 @@ title: ०१६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/016/016_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/016/016_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अन्वाचरन्नुपदिशन्नपि मोक्षधर्मं  
@@ -74,7 +74,7 @@ title: ०१६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/016/016_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/016/016_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कामो वसन्तमलयानिलबन्धुशाली  
@@ -92,7 +92,7 @@ title: ०१६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/016/016_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/016/016_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भीत्यालमङ्गजवसन्तसुराङ्गना वो  
@@ -110,7 +110,7 @@ title: ०१६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/016/016_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/016/016_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सम्मोहनाय मिलिता मदनादयस्ते  
@@ -128,7 +128,7 @@ title: ०१६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/016/016_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/016/016_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दृष्ट्वोर्वशीं त्वं कथां च निशम्य शक्रः  
@@ -146,7 +146,7 @@ title: ०१६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/016/016_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/016/016_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दक्षस्तु धातुरतिलालनया रजोन्धो  
@@ -164,7 +164,7 @@ title: ०१६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/016/016_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/016/016_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कृद्धेशमर्दितमखः स तु कृत्तशीर्षो  
