--- a/laxyam/padyam/purANam/nArAyaNIyam/017.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/017.md
@@ -2,7 +2,7 @@
 title: ०१७
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्तानपादनृपतेर्मनुनन्दनस्य  
@@ -20,7 +20,7 @@ title: ०१७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अङ्के पितुः सुरुचिपुत्रकमुत्तमं तं  
@@ -38,7 +38,7 @@ title: ०१७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वन्मोहिते पितरि पश्यति दारवश्ये  
@@ -56,7 +56,7 @@ title: ०१७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आकर्ण्य सोऽपि भवदर्चनिश्चितात्मा  
@@ -74,7 +74,7 @@ title: ०१७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ताते विषण्णहृदये नगरीं गतेन  
@@ -92,7 +92,7 @@ title: ०१७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावत्तपोबलनिरुच्छ्वसिते दिगन्ते  
@@ -110,7 +110,7 @@ title: ०१७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वद्दर्शनप्रमदभारतरङ्गितं तं  
@@ -128,7 +128,7 @@ title: ०१७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावद्विबोधविमलं प्रणुवन्तमेन  
@@ -146,7 +146,7 @@ title: ०१७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इत्यूचिषि त्वयि गते नृपनन्दनोऽसौ  
@@ -164,7 +164,7 @@ title: ०१७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यक्षेण देव निहते पुनरुत्तमेऽस्मिन्  
@@ -182,7 +182,7 @@ title: ०१७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/017/017_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अन्ते भवत्पुरुषनीतविमानयातो  
