--- a/laxyam/padyam/purANam/nArAyaNIyam/018.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/018.md
@@ -2,7 +2,7 @@
 title: ०१८
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/018/018_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/018/018_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जातस्य ध्रुवकुल एव तुङ्गकीर्ते  
@@ -20,7 +20,7 @@ title: ०१८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/018/018_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/018/018_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पापोऽपि क्षितितलपालनाय वेनः  
@@ -38,7 +38,7 @@ title: ०१८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/018/018_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/018/018_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सम्प्राप्ते हितकथनाय तापसौधे  
@@ -56,7 +56,7 @@ title: ०१८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/018/018_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/018/018_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तन्नाशात्खलजनभीरुकैर्मुनीन्द्रै  
@@ -74,7 +74,7 @@ title: ०१८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/018/018_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/018/018_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विख्यातः पृथुरिति तापसोपदिष्टैः  
@@ -92,7 +92,7 @@ title: ०१८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/018/018_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/018/018_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूयस्तां निजकुलमुख्यवत्सयुक्तैर्  
@@ -110,7 +110,7 @@ title: ०१८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/018/018_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/018/018_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आत्मानं यहति मखैस्त्वयि त्रिधाम  
@@ -128,7 +128,7 @@ title: ०१८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/018/018_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/018/018_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 देवेन्द्रं मुहुरिति वाजिनं हरन्तं  
@@ -146,7 +146,7 @@ title: ०१८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/018/018_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/018/018_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तद्दत्तं वरमुपलभ्य भक्तिमेकां  
@@ -164,7 +164,7 @@ title: ०१८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/018/018_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/018/018_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विज्ञानं सनकमुखोदितं दधानः  
