--- a/laxyam/padyam/purANam/nArAyaNIyam/019.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/019.md
@@ -2,7 +2,7 @@
 title: ०१९
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/019/019_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/019/019_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पृथोस्तु नप्ता पृथुधर्मकर्मठः प्राचीनबर्हिर्युवतौ शतदॄतौ ।  
@@ -16,7 +16,7 @@ title: ०१९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/019/019_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/019/019_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पितुः सिसृक्षानिरतस्य शासनाद्भवत्तपस्याभिरता दशापि ते ।  
@@ -30,7 +30,7 @@ title: ०१९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/019/019_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/019/019_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदा भवत्तीर्थमिदं समागतो भवो भवत्सेवकदर्शनादृतः ।  
@@ -44,7 +44,7 @@ title: ०१९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/019/019_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/019/019_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्तवं जपन्तस्तममी जलान्तरे भवन्तमासेविषतायुतं समाः ।  
@@ -58,7 +58,7 @@ title: ०१९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/019/019_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/019/019_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तपोभिरेषामतिमात्रवर्धिभिः स यज्ञहिंसानिरतोऽपि पावितः ।  
@@ -72,7 +72,7 @@ title: ०१९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/019/019_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/019/019_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कृपाबलेनैव पुरः प्रचेतसां प्रकाशमागाः पतगेन्द्रवाहनः ।  
@@ -86,7 +86,7 @@ title: ०१९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/019/019_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/019/019_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रचेतसां तावदयाचतामपिः त्वमेव कारुण्यभराद्वारानदाः ।  
@@ -100,7 +100,7 @@ title: ०१९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/019/019_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/019/019_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अवाप्य कान्तां तनयां महीरुहां तया रमध्वं दशलक्षवत्सरीम् ।  
@@ -114,7 +114,7 @@ title: ०१९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/019/019_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/019/019_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततश्च ते भूतलरोधिनस्तरून्कृधा दहन्तो द्रुहिणेन वारिताः ।  
@@ -128,7 +128,7 @@ title: ०१९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/019/019_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/019/019_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अवाप्य दक्षं च सुतं कृताध्वराः प्रचेतसो नारदलब्धयाधिया ।  
