--- a/laxyam/padyam/purANam/nArAyaNIyam/021.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/021.md
@@ -2,7 +2,7 @@
 title: ०२१
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मध्योद्भवओ भुव इलावृतनाम्नि वर्षे  
@@ -20,7 +20,7 @@ title: ०२१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भद्राश्वनामक इलावृतपूर्ववर्षे  
@@ -38,7 +38,7 @@ title: ०२१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ध्यायामि दक्षिणगते हरिवर्षवर्षे  
@@ -56,7 +56,7 @@ title: ०२१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वर्षे प्रतीचि ललितात्मनि केतुमाले  
@@ -74,7 +74,7 @@ title: ०२१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रम्येह्युदीचि खलु रम्यकनाम्नि वर्षे  
@@ -92,7 +92,7 @@ title: ०२१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वर्षं हिरण्मयसमाह्वयमौत्तराह  
@@ -110,7 +110,7 @@ title: ०२१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 किं चोत्तरेषु कुरुषु प्रियया धरण्या  
@@ -128,7 +128,7 @@ title: ०२१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 याम्यां दिशं भजति किंपुरुषाख्यवर्षे  
@@ -146,7 +146,7 @@ title: ०२१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रीनारदेन सह भारतखण्डमुख्यैस्  
@@ -164,7 +164,7 @@ title: ०२१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्लाक्षेऽर्करूपमयि शाल्मल इन्दुरूपं  
@@ -182,7 +182,7 @@ title: ०२१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सर्वैर्ध्रुवीदिभिरुडुप्रकरैर्ग्रहैश्च  
@@ -200,7 +200,7 @@ title: ०२१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/021/021_12.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_12.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पातालमूलभुवि शेषतनुं भवन्तं  
