--- a/laxyam/padyam/purANam/nArAyaNIyam/022.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/022.md
@@ -2,7 +2,7 @@
 title: ०२२
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अजामिलो नाम महीसुरः पुरा चरन्विभो धर्म पथान् गृहाश्रमी ।  
@@ -16,7 +16,7 @@ title: ०२२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्वतः प्रशान्तोऽपि तदाहृताशयः स्वधर्ममुत्सृज्य तया समारमन् ।  
@@ -30,7 +30,7 @@ title: ०२२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स मृत्युकाले यमराजकिङ्करान् भयङ्करांस्त्रीनभिलक्षयन्भिया ।  
@@ -44,7 +44,7 @@ title: ०२२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दुराशयस्यापि तदात्वनिर्गतत्वदीयनामाक्षरमात्रवैभवात् ।  
@@ -58,7 +58,7 @@ title: ०२२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अमुं च संपाश्य विकर्षतो भतान् विमुञ्चतेत्यारुरुधुर्बलादमी ।  
@@ -72,7 +72,7 @@ title: ०२२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भवन्तु पापानि कथं तु निष्कृते कृतेऽपि भो दण्डनमस्ति पण्दिताः ।  
@@ -86,7 +86,7 @@ title: ०२२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रुतिस्मृतिभ्यां विहिता व्रतादयः पुनन्ति पापं न लुनन्ति वासनाम् ।  
@@ -100,7 +100,7 @@ title: ०२२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनेन भो जन्मसहस्रकोटिभिः कृतेषु पापेष्वपि निष्कृतिः कृता ।  
@@ -114,7 +114,7 @@ title: ०२२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नृणामबुद्ध्यापि मुकुन्दकीर्तनं दहत्यघौघान्महिमास्य तादृशः ।  
@@ -128,7 +128,7 @@ title: ०२२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इतीरितैर्याम्यभटैरपासृते भवद्भटानां च गणे तिरोहिते ।  
@@ -142,7 +142,7 @@ title: ०२२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/022/022_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्वकिङ्गरावेदनशङ्कितो यमस्त्वदङ्घ्रिभक्तेषु न गम्यतामिति ।  
