--- a/laxyam/padyam/purANam/nArAyaNIyam/023.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/023.md
@@ -2,7 +2,7 @@
 title: ०२३
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्राचेतस्तु भगवन्नपरोऽपि दक्षस्  
@@ -20,7 +20,7 @@ title: ०२३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तस्यात्मजास्त्वयुतमीश पुनः सहस्रं  
@@ -38,7 +38,7 @@ title: ०२३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 षष्ट्या ततो दुहितृभिः सृजतः कुलौघान्  
@@ -56,7 +56,7 @@ title: ०२३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्राक्शूरसेनविषये किल चित्रकेतुः  
@@ -74,7 +74,7 @@ title: ०२३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तं नारदस्तु सममङ्गिरसा दयालुः  
@@ -92,7 +92,7 @@ title: ०२३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्तोत्रं च मन्त्रमपि नारदतोऽथ लब्ध्वा  
@@ -110,7 +110,7 @@ title: ०२३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तस्मै मृणालधवलेन सहस्रशीर्ष्णा  
@@ -128,7 +128,7 @@ title: ०२३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वद्भक्तमौलिरथ सोऽपि च लक्षलक्षं  
@@ -146,7 +146,7 @@ title: ०२३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अत्यन्तसङ्गविलयाय भवत्प्रणुन्नो  
@@ -164,7 +164,7 @@ title: ०२३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निस्सम्भ्रमस्त्वयमयाचितशापमोक्षो  
@@ -182,7 +182,7 @@ title: ०२३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/023/023_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वत्सेवनेन दितिरिन्द्रवधोद्यताऽपि  
