--- a/laxyam/padyam/purANam/nArAyaNIyam/025.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/025.md
@@ -2,7 +2,7 @@
 title: ०२५
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/025/025_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/025/025_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्तम्भे घट्टयतो हिरण्यकशिपोः कर्णौ समाचूर्णय  
@@ -20,7 +20,7 @@ title: ०२५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/025/025_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/025/025_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दैत्ये दिक्षु विसृष्टचक्षुषि महासंराम्भिणी स्तम्भतः  
@@ -38,7 +38,7 @@ title: ०२५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/025/025_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/025/025_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तप्तस्वर्णसवर्णघूर्णदतिरूक्षाक्षं सटाकेसर  
@@ -56,7 +56,7 @@ title: ०२५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/025/025_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/025/025_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्सर्पद्वलिभङ्गभीषुणहनुं ह्रस्वस्थवीयस्तर  
@@ -74,7 +74,7 @@ title: ०२५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/025/025_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/025/025_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नूनं विष्णुरयं निहन्म्यमुमिति भ्राम्यद्गदाभीषणं  
@@ -92,7 +92,7 @@ title: ०२५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/025/025_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/025/025_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भ्राम्यन्तं दितिहाधमं पुनरपि प्रोद्गृह्य दोर्भ्यां जवाद्  
@@ -110,7 +110,7 @@ title: ०२५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/025/025_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/025/025_07.mp3"></div>
 
 
 त्यक्त्वा तं हतमाशु रक्तलहरीसिक्तोन्नमद्वर्ष्मणि  
@@ -122,7 +122,7 @@ title: ०२५
 अभ्येतुं न शशक कोऽपि भुवने दूरे स्थिता भीरवः  
 सर्वे शर्वविरिञ्चवासवमुखाः प्रत्येकमस्तोषत ॥ २५८॥
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/025/025_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/025/025_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूयोऽप्यक्षतरोषधाम्नि भवति ब्रह्माज्ञया बालके  
@@ -140,7 +140,7 @@ title: ०२५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/025/025_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/025/025_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं नाटितरौद्रचेष्टित विभो श्रीतापनीयाभिध  
