--- a/laxyam/padyam/purANam/nArAyaNIyam/026.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/026.md
@@ -2,7 +2,7 @@
 title: ०२६
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/026/026_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/026/026_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इन्द्रद्युम्नः पाण्ड्यखण्डाधिराजस्त्वद्भक्तात्मा चन्दनाद्रौ कदाचित् ।  
@@ -16,7 +16,7 @@ title: ०२६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/026/026_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/026/026_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुम्भोद्भूतिस्संभृतक्रोधभारः स्तब्धात्मा त्वं हस्तिभूयं भजेति ।  
@@ -30,7 +30,7 @@ title: ०२६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/026/026_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/026/026_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दुग्धाम्भोधेर्मध्यभाजि त्रिकूटे क्रोडञ्छैले यूथपोऽयं वशाभिः ।  
@@ -44,7 +44,7 @@ title: ०२६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/026/026_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/026/026_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्वेन स्थेम्ना दिव्यदेहत्वशक्त्या सोऽयं खेदानप्रजानन् कदाचित् ।  
@@ -58,7 +58,7 @@ title: ०२६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/026/026_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/026/026_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हूहूस्तावद्देवलस्यापि शापत् ग्राहीभूतस्तज्जले वर्तमानः ।  
@@ -72,7 +72,7 @@ title: ०२६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/026/026_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/026/026_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वत्सेवाया वैभवाद्दुर्निरोधं युध्यन्तं तं वत्सराणां सहस्रम् ।  
@@ -86,7 +86,7 @@ title: ०२६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/026/026_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/026/026_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आर्तिव्यक्तप्राक्तनज्ञानभक्तिः शुण्डोत्क्षिप्तैः पुण्डरीकैस्समर्चन् ।  
@@ -100,7 +100,7 @@ title: ०२६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/026/026_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/026/026_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रुत्वा स्तोत्रं निर्गुणस्थं समस्तं ब्रह्मेशाद्यैर्नाहमित्यप्रयाते ।  
@@ -114,7 +114,7 @@ title: ०२६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/026/026_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/026/026_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हस्तीन्द्रं तं हस्तपद्मेन धृत्वा चक्रेण त्वं नक्रवर्यं व्यदारीः ।  
@@ -128,7 +128,7 @@ title: ०२६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/026/026_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/026/026_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एतद्वृत्तं त्वां च मां च प्रगे यो गायेत्सोऽयं भूयसे श्रेयसे स्यात् ।  
