--- a/laxyam/padyam/purANam/nArAyaNIyam/027.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/027.md
@@ -2,7 +2,7 @@
 title: ०२७
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/027/027_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दुर्वासास्सुरवनिताप्तदिव्यमाल्यं शक्राय स्वयमुपदाय तत्र भूयः ।  
@@ -16,7 +16,7 @@ title: ०२७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/027/027_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शापेन प्रथितजरेऽथ निर्जरेन्द्रे देवेष्वप्यसुरजितेषु निष्प्रभेषु ।  
@@ -30,7 +30,7 @@ title: ०२७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/027/027_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ब्रह्माद्यैः स्तुतमहिमा चिरं तदानीं प्रादुष्षन्वरद पुरः परेण धाम्ना ।  
@@ -44,7 +44,7 @@ title: ०२७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/027/027_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सन्धानं कृतवति दानवैः सुरौधे मन्थानं नयति मदेन मन्दराद्रिम् ।  
@@ -58,7 +58,7 @@ title: ०२७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/027/027_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आधाय द्रुतमथ वासुकिं वरत्रां पाथोधौ विनिहितसर्वबीजजाले ।  
@@ -72,7 +72,7 @@ title: ०२७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/027/027_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्षुब्धाद्रौ क्षुभितजलोदरे तदानीं दुग्धाब्धौ गुरुतरभारतो निमग्ने ।  
@@ -86,7 +86,7 @@ title: ०२७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/027/027_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वज्रातिस्थिरतरकर्परेण विष्णो विस्तारात्परिगतलक्षयोजनेन ।  
@@ -100,7 +100,7 @@ title: ०२७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/027/027_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उन्मग्ने झटिति तदा धराधरेन्द्रे निर्मेथुर्दृढमिह सम्मदेन सर्वे ।  
@@ -114,7 +114,7 @@ title: ०२७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/027/027_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उद्दामभ्रमणजवोन्नमद्गिरीन्द्रन्यस्तैकस्थिरतरहस्तपङ्कजं त्वाम् ।  
@@ -128,7 +128,7 @@ title: ०२७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/027/027_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दैत्यौधे भुजगमुखानिलेन तप्ते तेनैव त्रिदशकुलेऽपि किञ्चिदार्ते ।  
@@ -142,7 +142,7 @@ title: ०२७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/027/027_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उद्भ्राम्यद्बहुतिमिनक्रचक्रवाले तत्राब्धौ चिरमथितेऽपि निर्विकारे ।  
