--- a/laxyam/padyam/purANam/nArAyaNIyam/032.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/032.md
@@ -2,7 +2,7 @@
 title: ०३२
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/032/032_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/032/032_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पुरा हयग्रीवमहासुरेण षष्ठान्तरान्तोद्यदकाण्डकल्पे ।  
@@ -16,7 +16,7 @@ title: ०३२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/032/032_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/032/032_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सत्यव्रतस्य द्रमिडाधिभर्तुर्नदीजले तर्पयतस्तदानीम् ।  
@@ -30,7 +30,7 @@ title: ०३२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/032/032_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/032/032_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्षिप्तं जले त्वां चकितं विलोक्य निन्येऽन्बुपात्रेण मुनिः स्वगेहम् ।  
@@ -44,7 +44,7 @@ title: ०३२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/032/032_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/032/032_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 योगप्रभावाद्भवदाज्ञयैव नीतस्ततस्त्वं मुनिना पयोधिम् ।  
@@ -58,7 +58,7 @@ title: ०३२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/032/032_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/032/032_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्राप्ते त्वदुक्तेऽहनि वारिधारापरिप्लुते भूमितले मुनीन्द्रः ।  
@@ -72,7 +72,7 @@ title: ०३२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/032/032_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/032/032_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 धरां त्वदादेशकरीमवाप्तां नौरूपिणीमारुरुहुस्तदा ते ।  
@@ -86,7 +86,7 @@ title: ०३२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/032/032_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/032/032_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 झषाकृतिं योजनलक्षदीर्घां दधानमुच्चैस्तरतेजसं त्वाम् ।  
@@ -100,7 +100,7 @@ title: ०३२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/032/032_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/032/032_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आकृष्टनौको मुनिमण्डलाय प्रदर्शयन्विश्वजगद्विभागान् ।  
@@ -114,7 +114,7 @@ title: ०३२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/032/032_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/032/032_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कल्पावधौ सप्त मुनीन्पुरोवत्प्रस्ताप्य सत्यव्रतभूमिपं तम् ।  
@@ -128,7 +128,7 @@ title: ०३२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/032/032_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/032/032_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्वतुङ्गषृङ्गक्षतवक्षसं तं निपात्य दैत्यं निगमान्गृहीत्वा ।  
