--- a/laxyam/padyam/purANam/nArAyaNIyam/033.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/033.md
@@ -2,7 +2,7 @@
 title: ०३३
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/033/033_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/033/033_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वैवस्वताख्यमनुपुत्रनभागजात  
@@ -20,7 +20,7 @@ title: ०३३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/033/033_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/033/033_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वत्प्रीतयेसकलमेव वितन्वतोऽस्य  
@@ -38,7 +38,7 @@ title: ०३३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/033/033_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/033/033_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स द्वादशीव्रतमथो भवदर्चनार्थं  
@@ -56,7 +56,7 @@ title: ०३३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/033/033_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/033/033_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तत्राथ पारणदिने भवदर्चनान्ते  
@@ -74,7 +74,7 @@ title: ०३३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/033/033_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/033/033_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 राज्ञाथ पारणमुह्ङ्र्तसमाप्तिखेदा  
@@ -92,7 +92,7 @@ title: ०३३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/033/033_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/033/033_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कृत्यां च तामसिधरां भुवनं दहन्ती  
@@ -110,7 +110,7 @@ title: ०३३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/033/033_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/033/033_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 धावन्नशेषभुवनेषु भिया स पश्यन्  
@@ -128,7 +128,7 @@ title: ०३३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/033/033_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/033/033_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूयो भवन्निलयमेत्य मुनिं नमन्तं  
@@ -146,7 +146,7 @@ title: ०३३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/033/033_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/033/033_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावत्समेत्य मुनिना स गृहीतपादो  
@@ -164,7 +164,7 @@ title: ०३३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/033/033_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/033/033_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 राजा प्रतीक्ष्य मुनिमेकसमामनाश्वान्  
