--- a/laxyam/padyam/purANam/nArAyaNIyam/036.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/036.md
@@ -2,7 +2,7 @@
 title: ०३६
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अत्रेः पुत्रतया पुरा त्वमनसूयायां हि दत्ताभिधो  
@@ -20,7 +20,7 @@ title: ०३६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सत्यं कर्तुमथार्जुनस्य च वरं तच्छक्तिमात्रानतं  
@@ -38,7 +38,7 @@ title: ०३६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 लब्धाम्नायगणश्चतुर्दशवयाः गन्धर्वराजे मना  
@@ -56,7 +56,7 @@ title: ०३६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पित्रा मातृमुदे स्तवाहृतवियद्धेनोर्निजादाश्रमात्  
@@ -74,7 +74,7 @@ title: ०३६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आखेटेपगतोऽर्जुनः सुरगवीसम्प्राप्तसम्पद्गणै  
@@ -92,7 +92,7 @@ title: ०३६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शुक्रोज्जीविततातवाक्यचलितक्रोधोऽथ सख्या समं  
@@ -110,7 +110,7 @@ title: ०३६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पुत्राणामयुतेनसप्तदशभिश्चाक्षौहिणीभिर्महा  
@@ -128,7 +128,7 @@ title: ०३६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 लीलावारितनर्मदाजलवलल्लङ्केशगर्वापह  
@@ -146,7 +146,7 @@ title: ०३६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूयोऽमर्षितहेहयात्मजगणैस्ताते हते रेणुका  
@@ -164,7 +164,7 @@ title: ०३६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तातोज्जीवनकृन्नृपालककुलं त्रिःसप्तकृत्वो जयन्  
@@ -182,7 +182,7 @@ title: ०३६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/036/036_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न्यस्यास्त्राणि महेन्द्रभूभृति तपस्तन्वन्पुनर्मज्जितां  
