--- a/laxyam/padyam/purANam/nArAyaNIyam/039.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/039.md
@@ -2,7 +2,7 @@
 title: ०३९
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/039/039_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/039/039_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भवन्तमयमुद्वहन् यदुकुलोद्वहो निस्सरन्  
@@ -20,7 +20,7 @@ title: ०३९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/039/039_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/039/039_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रसुप्तपशुपालिकां निभृतमारुदद्बालिका  
@@ -38,7 +38,7 @@ title: ०३९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/039/039_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/039/039_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततस्त्वदनुजारवक्षपितनिद्रवेगद्रव  
@@ -56,7 +56,7 @@ title: ०३९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/039/039_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/039/039_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ध्रुवं कपटशालिनो मधुहरस्य माया भवे  
@@ -74,7 +74,7 @@ title: ०३९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/039/039_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/039/039_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततो भवदुपासको झटिति मृत्युपाशादिव  
@@ -92,7 +92,7 @@ title: ०३९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/039/039_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/039/039_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नृशंसतर कंस ते किमु मया विनिष्पिष्टया  
@@ -110,7 +110,7 @@ title: ०३९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/039/039_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/039/039_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रगे पुनरगात्मजावचनमीरिता भूभुजा  
@@ -128,7 +128,7 @@ title: ०३९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/039/039_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/039/039_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततः पशुपमन्दिरे त्वयि मुकुन्द नन्दप्रिया  
@@ -146,7 +146,7 @@ title: ०३९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/039/039_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/039/039_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अहो खलु यशोदया नवकलायचेतोहरं  
@@ -164,7 +164,7 @@ title: ०३९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/039/039_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/039/039_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भवत्कुशलकाम्यया स खलु नन्दगोपस्तदा  
