--- a/laxyam/padyam/purANam/nArAyaNIyam/041.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/041.md
@@ -2,7 +2,7 @@
 title: ०४१
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/041/041_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/041/041_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 व्रजेश्वरः शौरिवचो निशम्य समाव्रजन्नध्वनि भीतचेताः ।  
@@ -16,7 +16,7 @@ title: ०४१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/041/041_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/041/041_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निशम्य गोपीवचनादुदन्तं सर्वेऽपि गोपा भयविस्मयान्धाः ।  
@@ -30,7 +30,7 @@ title: ०४१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/041/041_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/041/041_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वत्पीतपूतस्तनतच्छरीरात्समुच्चलन्नुच्चतरो हि धूमः ।  
@@ -44,7 +44,7 @@ title: ०४१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/041/041_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/041/041_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मदङ्गसङ्गस्य फलं न दूरए क्षणेन तावद्भवतामपि स्यात् ।  
@@ -58,7 +58,7 @@ title: ०४१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/041/041_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/041/041_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चित्रं पिशाच्या न हतः कुमारश्चित्रं पुरैवाकथि शौरिणेदम् ।  
@@ -72,7 +72,7 @@ title: ०४१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/041/041_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/041/041_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दिने दिनेऽथ प्रतिवृद्धलक्ष्मीरक्षीणमङ्गल्यशतो व्रजोऽयम् ।  
@@ -86,7 +86,7 @@ title: ०४१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/041/041_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/041/041_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गृहेषु ते कोमलरूपहासमिथः कथासङ्कुलिताः कमन्यः ।  
@@ -100,7 +100,7 @@ title: ०४१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/041/041_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/041/041_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अहो कुमारो मयि दत्तदृष्टिः स्मितः कृतं मां प्रति वत्सकेन ।  
@@ -114,7 +114,7 @@ title: ०४१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/041/041_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/041/041_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भवद्वपुःस्पर्शनकौतुकेन करात्करं गोपवधूजनेन ।  
@@ -128,7 +128,7 @@ title: ०४१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/041/041_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/041/041_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निपाययन्ती स्तनमङ्कगं त्वां विलोकयन्ती वदनं हसन्ती ।  
