--- a/laxyam/padyam/purANam/nArAyaNIyam/044.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/044.md
@@ -2,7 +2,7 @@
 title: ०४४
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/044/044_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/044/044_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गूढं वसुदेवगिरा कर्तुं ते निष्क्रियस्य संस्कारान् ।  
@@ -16,7 +16,7 @@ title: ०४४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/044/044_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/044/044_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नन्दोऽथ नन्दितात्मा वृन्दिष्टं मानयन्नमुं यमिनाम् ।  
@@ -30,7 +30,7 @@ title: ०४४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/044/044_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/044/044_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यदुवंशाचार्यत्वात् सुनिभृतमिदमार्य कार्यमिति कथयन् ।  
@@ -44,7 +44,7 @@ title: ०४४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/044/044_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/044/044_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कथमस्य नाम कुर्वे सहस्रनाम्नो ह्यनन्तनाम्नो वा ।  
@@ -58,7 +58,7 @@ title: ०४४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/044/044_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/044/044_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कृषिधातुणकाराभ्यां सत्तानन्दात्मतां किलाभिलपत् ।  
@@ -72,7 +72,7 @@ title: ०४४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/044/044_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/044/044_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अन्यांश्च नामभेदान् व्याकुर्वन्नग्रजे च रामादीन् ।  
@@ -86,7 +86,7 @@ title: ०४४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/044/044_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/044/044_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्निह्यति यत्सव पुत्रे मुह्यति स न मायिकैः पुनश्शोकैः ।  
@@ -100,7 +100,7 @@ title: ०४४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/044/044_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/044/044_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जेष्यति बहुतरदैत्यान् नेष्यति निजबन्धुलोकममलपदम् ।  
@@ -114,7 +114,7 @@ title: ०४४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/044/044_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/044/044_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अमुनैव सर्वदुर्गं तरितास्थ कृतास्थमत्र तिष्ठध्वम् ।  
@@ -128,7 +128,7 @@ title: ०४४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/044/044_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/044/044_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गर्गेऽथ निर्गतेऽस्मिन् नन्दितनन्दादिनन्द्यमानस्त्वम् ।  
