--- a/laxyam/padyam/purANam/nArAyaNIyam/046.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/046.md
@@ -2,7 +2,7 @@
 title: ०४६
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/046/046_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/046/046_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयि देव पुरा किल त्वयि स्वयमुत्तानशये स्तनन्धये ।  
@@ -16,7 +16,7 @@ title: ०४६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/046/046_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/046/046_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पुनरप्यथ बालकैः समं त्वयि लीलानिरते जगत्पते ।  
@@ -30,7 +30,7 @@ title: ०४६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/046/046_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/046/046_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयि ते प्रलयावधौ विभो क्षितितोयादिसमस्तभक्षिणः ।  
@@ -44,7 +44,7 @@ title: ०४६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/046/046_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/046/046_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयि दुर्विनयात्मक त्वया किमु मृत्सा बत वत्स भक्षिता ।  
@@ -58,7 +58,7 @@ title: ०४६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/046/046_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/046/046_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयि ते सकलैर्विनिश्चिते विमतिश्चेद्वदनं विदार्यताम् ।  
@@ -72,7 +72,7 @@ title: ०४६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/046/046_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/046/046_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अपि मृल्लवदर्शनोत्सुकां जननीं तां बहु तर्पयन्निव ।  
@@ -86,7 +86,7 @@ title: ०४६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/046/046_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/046/046_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुहचिद्वनमम्बुधिः क्वचित् क्वचिदभ्रं कुहचिद्रसातलम् ।  
@@ -100,7 +100,7 @@ title: ०४६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/046/046_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/046/046_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कलशाम्बुधिशायिनं पुनः परवैकुण्ठपदाधिवासिनम् ।  
@@ -114,7 +114,7 @@ title: ०४६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/046/046_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/046/046_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विकसद्भुवने मुखोदरे ननु भूयोऽपि तथाविधाननः ।  
@@ -128,7 +128,7 @@ title: ०४६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/046/046_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/046/046_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 धृततत्त्वधियं तदा क्षणं जननीं तां प्रणयेन मोहयन् ।  
