--- a/laxyam/padyam/purANam/nArAyaNIyam/048.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/048.md
@@ -2,7 +2,7 @@
 title: ०४८
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/048/048_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/048/048_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मुदा सुरौधैस्त्वमुदारसम्मदैरुदीर्य दामोदर इत्यभिष्टुतः ।  
@@ -16,7 +16,7 @@ title: ०४८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/048/048_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/048/048_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुबेरसूनुर्नलकूबराभिधः परो मणिग्रीव इति प्रथां गतः ।  
@@ -30,7 +30,7 @@ title: ०४८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/048/048_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/048/048_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुरापगायां किल तौ मदोत्कटौ सुरापगायद्बहुयौवतावृतौ ।  
@@ -44,7 +44,7 @@ title: ०४८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/048/048_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/048/048_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भिया प्रियालोकमुपात्तवाससं पुरो निरीक्ष्यापि मदान्धचेतसौ ।  
@@ -58,7 +58,7 @@ title: ०४८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/048/048_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/048/048_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 युवामवाप्तौ ककुभात्मतां चिरं हरिं निरीक्ष्याथ पदं स्वमाप्नुतम् ।  
@@ -72,7 +72,7 @@ title: ०४८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/048/048_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/048/048_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अतन्द्रमिन्द्रदृयुगं तथाविधं समेयुषा मन्थरगामिना त्वया ।  
@@ -86,7 +86,7 @@ title: ०४८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/048/048_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/048/048_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अभाजि शाखिद्वितयं यदा त्वया तदैव तद्गर्भतलान्निरेयुषा ।  
@@ -100,7 +100,7 @@ title: ०४८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/048/048_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/048/048_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इहान्यभक्तोऽपि समेष्यति क्रमाद्भवन्तमेतौ खलु रुद्रसेवकौ ।  
@@ -114,7 +114,7 @@ title: ०४८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/048/048_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/048/048_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततस्तरूद्दारणदारुणारवप्रकम्पिसम्पातिनि गोपमण्डले ।  
@@ -128,7 +128,7 @@ title: ०४८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/048/048_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/048/048_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 महीरुहोर्मध्यगतो बतार्भको हरेः प्रभावादपरिक्षतोऽधुना ।  
