--- a/laxyam/padyam/purANam/nArAyaNIyam/050.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/050.md
@@ -2,7 +2,7 @@
 title: ०५०
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/050/050_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/050/050_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तरलमधुकृद्वृन्दे बृन्दावनेऽथ मनोहरे  
@@ -20,7 +20,7 @@ title: ०५०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/050/050_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/050/050_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विहितजगतीरक्षं लक्ष्मीकराम्बुजलालितं  
@@ -38,7 +38,7 @@ title: ०५०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/050/050_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/050/050_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विलसदुलपे कान्तारान्ते समीरणशीतले  
@@ -56,7 +56,7 @@ title: ०५०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/050/050_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/050/050_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रभसविलसत्पुच्छं विच्छायतोऽस्य विलोकयन्  
@@ -74,7 +74,7 @@ title: ०५०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/050/050_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/050/050_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निपतति महादैत्ये जात्या दुरात्मनि तत्क्षणं  
@@ -92,7 +92,7 @@ title: ०५०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/050/050_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/050/050_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुरभिलतमा मूर्धन्यूर्ध्वं कुतः कुसुमावली  
@@ -110,7 +110,7 @@ title: ०५०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/050/050_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/050/050_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्वचन दिवसे भूयो भूयस्तरेपरुषातपे  
@@ -128,7 +128,7 @@ title: ०५०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/050/050_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/050/050_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पिबति सलिलं गोपव्राते भवनतमभिद्रुतः  
@@ -146,7 +146,7 @@ title: ०५०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/050/050_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/050/050_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सपदि सहजां सन्द्रष्टुं वा मृतां खलु पूतना  
@@ -164,7 +164,7 @@ title: ०५०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/050/050_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/050/050_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ललितमुरलीनादं दूरान्निशम्य वधूजनै  
