--- a/laxyam/padyam/purANam/nArAyaNIyam/054.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/054.md
@@ -2,7 +2,7 @@
 title: ०५४
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/054/054_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/054/054_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वत्सेवोत्कः सौभारिर्नाम पूर्वं कालिन्द्यन्तर्द्वादशाब्दं तपस्यन् ।  
@@ -16,7 +16,7 @@ title: ०५४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/054/054_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/054/054_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वद्वाहं तं सक्षुधं तृक्षसूनुं मीनं कञ्चिज्जक्षतं लक्षयन् सः ।  
@@ -30,7 +30,7 @@ title: ०५४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/054/054_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/054/054_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तस्मिन्काले काइयः क्ष्वेलदर्पात्सर्पारातेः कल्पितं भागमश्नन् ।  
@@ -44,7 +44,7 @@ title: ०५४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/054/054_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/054/054_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 घोरे तस्मिन्सूरजानीरवासे तीरे वृक्षा विक्षताः क्ष्वेलवेगात् ।  
@@ -58,7 +58,7 @@ title: ०५४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/054/054_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/054/054_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 काले तस्मिन्नेकदा सीरपाणिं मुक्त्वा याते यामुनं काननान्तम् ।  
@@ -72,7 +72,7 @@ title: ०५४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/054/054_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/054/054_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नश्यज्जीवान् विच्युतान् क्ष्मातले तान् विश्वान् पश्यन्नच्युत त्वं दयार्द्रः ।  
@@ -86,7 +86,7 @@ title: ०५४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/054/054_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/054/054_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 किं किं जातो हर्षवर्षातिरेकः सर्वाङ्गेष्वित्युत्थिता गोपसङ्घाः ।  
@@ -100,7 +100,7 @@ title: ०५४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/054/054_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/054/054_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गावश्चैवं लब्धजीवाः क्षणेन स्फीतानन्दास्त्वां च दृष्ट्वा पुरस्तात् ।  
@@ -114,7 +114,7 @@ title: ०५४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/054/054_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/054/054_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रोमाञ्चोऽयं सर्वतो नः शरीरे भूयस्यन्तः काचिदानन्दमूर्छा ।  
@@ -128,7 +128,7 @@ title: ०५४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/054/054_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/054/054_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं भक्तान्मुक्तजीवानपि त्वं मुग्धापाङ्कैरस्तरोगांस्तनोषि ।  
