--- a/laxyam/padyam/purANam/nArAyaNIyam/055.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/055.md
@@ -2,7 +2,7 @@
 title: ०५५
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/055/055_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/055/055_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ वारिणि घोरतरं फणिनं प्रतिवारयितुं कृतधीर्भगवन् ।  
@@ -16,7 +16,7 @@ title: ०५५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/055/055_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/055/055_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अधिरुह्य पदाम्बुरुहेण च तं नवपल्लवतुल्यमोज्ञरुचा ।  
@@ -30,7 +30,7 @@ title: ०५५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/055/055_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/055/055_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भुवनत्रयभारभृतो भवतो गुरुभारविक्रम्पिविजृम्भिजला ।  
@@ -44,7 +44,7 @@ title: ०५५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/055/055_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/055/055_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ दिक्षु विदिक्षु परिक्षुभितभ्रमितोदरवारिनिनादभरैः ।  
@@ -58,7 +58,7 @@ title: ०५५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/055/055_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/055/055_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 फणशृङ्गसहस्रविनिस्सृमरज्वलदग्निकणोग्रविषाम्बुधरम् ।  
@@ -72,7 +72,7 @@ title: ०५५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/055/055_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/055/055_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ज्वलदक्षिपरिक्षरदुग्रविषश्वसनिष्मभरः स महाभुजगः ।  
@@ -86,7 +86,7 @@ title: ०५५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/055/055_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/055/055_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अविलोक्य भवन्तमथाकुलिते तटगामिनि बालकधेनुगणे ।  
@@ -100,7 +100,7 @@ title: ०५५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/055/055_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/055/055_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अखिलेषु विभो भवदीयदशामवलोक्य जिहासुषु जीवभरम् ।  
@@ -114,7 +114,7 @@ title: ०५५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/055/055_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/055/055_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अधिरुह्य ततः फणिराजफणान्ननृते भवता मृदुपादरुचा ।  
@@ -128,7 +128,7 @@ title: ०५५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/055/055_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/055/055_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जहृषुः पशुपास्तुतुषुर्मुनयो ववृषुः कुसुमानि सुरेन्द्रगणाः ।  
