--- a/laxyam/padyam/purANam/nArAyaNIyam/057.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/057.md
@@ -2,7 +2,7 @@
 title: ०५७
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रामसखः क्वापि दिने कामद भगवन् गतो भवान्विपिनम् ।  
@@ -16,7 +16,7 @@ title: ०५७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सन्दर्शयन्बलाय स्वैरं बृन्दावनश्रियं विमलाम् ।  
@@ -30,7 +30,7 @@ title: ०५७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावत्तावकनिधनस्पृहयालुर्गोपमूर्तिरदयालुः ।  
@@ -44,7 +44,7 @@ title: ०५७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जानन्नप्यविजानन्निव तेन समं निबद्धसौहार्दः ।  
@@ -58,7 +58,7 @@ title: ०५७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गोपान्विभज्य तन्वन्सङ्घं बलभद्रकं भवत्कमपि ।  
@@ -72,7 +72,7 @@ title: ०५७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कल्पितविजेतृवहने समरे परयूथगं स्वदयिततरम् ।  
@@ -86,7 +86,7 @@ title: ०५७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं बहुषु विभूमन् बालेषु वहत्सु वाह्यमानेषु ।  
@@ -100,7 +100,7 @@ title: ०५७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वद्दूरं गमयन्तं तं दृष्ट्वा हलिनि विहितगरिमभरे ।  
@@ -114,7 +114,7 @@ title: ०५७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उच्चतया दैत्यतनोस्त्वन्मुखमालोक्य दूरतो रामः ।  
@@ -128,7 +128,7 @@ title: ०५७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हत्वा दानववीरं प्राप्तं बलमालिलिङ्गिथ प्रेम्णा ।  
@@ -142,7 +142,7 @@ title: ०५७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/057/057_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आलम्बो भुवनानां प्रालम्बं निधनमेवमारचयन् ।  
