--- a/laxyam/padyam/purANam/nArAyaNIyam/058.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/058.md
@@ -2,7 +2,7 @@
 title: ०५८
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/058/058_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/058/058_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वयि विहरणलोले बालजालैः प्रलम्ब  
@@ -20,7 +20,7 @@ title: ०५८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/058/058_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/058/058_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनधिगतनिदाघक्रौर्यबृन्दावनान्तात्  
@@ -38,7 +38,7 @@ title: ०५८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/058/058_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/058/058_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदनु सह सहायैर्दूरमन्विष्य शौरे  
@@ -56,7 +56,7 @@ title: ०५८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/058/058_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/058/058_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सकलहरिति दीप्ते घोरभाङ्कारभीमे  
@@ -74,7 +74,7 @@ title: ०५८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/058/058_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/058/058_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अलमलमतिभीत्य सर्वतो मीलयध्वं  
@@ -92,7 +92,7 @@ title: ०५८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/058/058_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/058/058_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जय जय तव माया केयमीशेति तेषां  
@@ -110,7 +110,7 @@ title: ०५८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/058/058_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/058/058_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वयि विमुखविमोच्चैस्तापभारं वहन्तं  
@@ -128,7 +128,7 @@ title: ०५८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/058/058_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/058/058_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदनु जलदजालैस्त्वद्वपुस्तुल्यभाभि  
@@ -146,7 +146,7 @@ title: ०५८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/058/058_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/058/058_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुहरतलनिविष्टं त्वां गरिष्ठं गिरीन्द्रः  
@@ -164,7 +164,7 @@ title: ०५८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/058/058_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/058/058_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ शरदमुपेतां तां भवद्भक्तचेतो  
