--- a/laxyam/padyam/purANam/nArAyaNIyam/060.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/060.md
@@ -2,7 +2,7 @@
 title: ०६०
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मदनातुरचेतसोऽन्वहं भवदङ्घ्रिद्वयदास्यकाम्यया ।  
@@ -16,7 +16,7 @@ title: ०६०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तव नामकथारताः समं सुदृशः प्रातरुपागताः नदीम् ।  
@@ -30,7 +30,7 @@ title: ०६०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इति मासमुपाहितव्रतास्तरलाक्षीरभिवीक्ष्य ता भवान् ।  
@@ -44,7 +44,7 @@ title: ०६०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नियमावसितौ निजाम्बरं तटसीमन्यवमुच्य तास्तदा ।  
@@ -58,7 +58,7 @@ title: ०६०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्रपया नमिताननास्वथो वनितास्वम्बरजालमन्तिके ।  
@@ -72,7 +72,7 @@ title: ०६०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इह तावदुपेत्य नीयतां वसनं वः सुदृशो यथायथम् ।  
@@ -86,7 +86,7 @@ title: ०६०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयि जीव चिरं किशोर नस्तव दासीरवशीकरोषि किम् ।  
@@ -100,7 +100,7 @@ title: ०६०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अधिरुह्य तटं कृताञ्जलीः परिशुद्धाः स्वगतीर्निरीक्ष्य ताः ।  
@@ -114,7 +114,7 @@ title: ०६०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विदितं ननु वो मनीषितं वदितारस्त्विह योग्यमुत्तरम् ।  
@@ -128,7 +128,7 @@ title: ०६०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उपकर्ण्य भवन्मुखच्युतं मधुनिष्यन्दि वचो मृगीदृशः ।  
@@ -142,7 +142,7 @@ title: ०६०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/060/060_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इति नन्वनुगृह्य बल्लवीर्विपिनान्तेषु पुरेव सञ्चरन् ।  
