--- a/laxyam/padyam/purANam/nArAyaNIyam/062.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/062.md
@@ -2,7 +2,7 @@
 title: ०६२
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/062/062_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/062/062_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कदाचिद्गोपालान् विहितमखसम्भारविभवान्  
@@ -20,7 +20,7 @@ title: ०६२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/062/062_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/062/062_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बभाषे नन्दस्त्वां सुत ननु विधेयो मघवतो  
@@ -38,7 +38,7 @@ title: ०६२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/062/062_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/062/062_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इति श्रुत्वा वाचं पितुरयि भवानाह सरसं  
@@ -56,7 +56,7 @@ title: ०६२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/062/062_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/062/062_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इदं तावत्सत्यं यदिह पशवो नः कुलधनं  
@@ -74,7 +74,7 @@ title: ०६२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/062/062_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/062/062_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भवद्वाचं श्रुत्वा बहुमतियुतास्तेऽपि पशुपा  
@@ -92,7 +92,7 @@ title: ०६२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/062/062_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/062/062_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अवोचश्चैवं तान्किमिह वितथं मे निगदितं  
@@ -110,7 +110,7 @@ title: ०६२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/062/062_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/062/062_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 परिप्रीताः याताः खलु भवदुपेता व्रजजुषो  
@@ -128,7 +128,7 @@ title: ०६२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/062/062_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/062/062_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मनुष्यत्वं यातो मधुभिदपि देवेष्वविनयं  
@@ -146,7 +146,7 @@ title: ०६२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/062/062_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/062/062_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वदावासं हन्तुं प्रलयजलदानम्बरभुवि  
@@ -164,7 +164,7 @@ title: ०६२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/062/062_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/062/062_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुरेन्द्रः क्रुद्धश्चेत् द्विजकरुणया शैलकृपया  
