--- a/laxyam/padyam/purANam/nArAyaNIyam/063.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/063.md
@@ -2,7 +2,7 @@
 title: ०६३
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/063/063_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/063/063_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ददृशिरे किल तत्क्षणमक्षतस्तनितजृम्भितकम्पितदिक्तटाः ।  
@@ -16,7 +16,7 @@ title: ०६३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/063/063_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/063/063_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विपुलकरकमिश्रैस्तोयधारानिपातै  
@@ -34,7 +34,7 @@ title: ०६३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/063/063_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/063/063_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुल इह खलु गोत्रो दैवतं गोत्रशत्रो  
@@ -52,7 +52,7 @@ title: ०६३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/063/063_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/063/063_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदनु गिरिवरस्य प्रोद्धृतस्यास्य तावत्  
@@ -70,7 +70,7 @@ title: ०६३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/063/063_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/063/063_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भवति विधृतशैले बालिकाभिर्वयस्यै  
@@ -88,7 +88,7 @@ title: ०६३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/063/063_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/063/063_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अतिमहान् गिरिरेष तु वामके करसरोरुहि तं धरते चिरम् ।  
@@ -102,7 +102,7 @@ title: ०६३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/063/063_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/063/063_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अहह धार्ष्ट्यममुष्य वटोर्गिरिं व्यथितबाहुरसाववरोपयेत् ।  
@@ -116,7 +116,7 @@ title: ०६३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/063/063_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/063/063_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अचलति त्वयि देव पदात्पदं गलितसर्वजले च घनोत्करे ।  
@@ -130,7 +130,7 @@ title: ०६३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/063/063_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/063/063_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शममुपेयुषि वर्षभरे तदा पशुपधेनुकुले च विनिर्गते ।  
@@ -144,7 +144,7 @@ title: ०६३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/063/063_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/063/063_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 धरणिमेव पुरा धृतवानसि क्षितिधरोद्धरणे तव कः श्रमः ।  
