--- a/laxyam/padyam/purANam/nArAyaNIyam/064.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/064.md
@@ -2,7 +2,7 @@
 title: ०६४
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/064/064_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/064/064_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आलोक्य शैलोद्धरणादिरूपं प्रभावमुच्चैस्तव गोपलोकाः ।  
@@ -16,7 +16,7 @@ title: ०६४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/064/064_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/064/064_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गर्गोदितो निर्गदितो निजाय वर्गाय तातेन तव प्रभावः ।  
@@ -30,7 +30,7 @@ title: ०६४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/064/064_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/064/064_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततोऽवमानोदिततत्त्वबोधः सुराधिराजः सह दिव्यगव्या ।  
@@ -44,7 +44,7 @@ title: ०६४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/064/064_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/064/064_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्नेहस्तुनैस्त्वां सुरभिः पयोभिर्गोविन्दनामाङ्कितमभ्यषिञ्चत् ।  
@@ -58,7 +58,7 @@ title: ०६४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/064/064_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/064/064_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जगत्त्रयेशे त्वयि गोकुलेश तथाऽभिषिक्ते सति गोपवाटः ।  
@@ -72,7 +72,7 @@ title: ०६४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/064/064_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/064/064_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कदाचिदन्तर्यमुनं प्रभाते स्नायन् पिता वारुणपूरुषेण ।  
@@ -86,7 +86,7 @@ title: ०६४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/064/064_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/064/064_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ससम्भ्रमं तेन जलाधिपेन प्रपूजितस्त्वं प्रतिगृह्य तातम् ।  
@@ -100,7 +100,7 @@ title: ०६४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/064/064_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/064/064_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हरिं विनिश्चित्य भवन्तमेतान् भवत्पदालोकनबद्धतृष्णान् ।  
@@ -114,7 +114,7 @@ title: ०६४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/064/064_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/064/064_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्फुरत्परानन्दरसप्रवाहप्रपूर्णकैवल्यमहापयोधौ ।  
@@ -128,7 +128,7 @@ title: ०६४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/064/064_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/064/064_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 करबदरवदेवं देव कुत्रावतारे  
