--- a/laxyam/padyam/purANam/nArAyaNIyam/065.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/065.md
@@ -2,7 +2,7 @@
 title: ०६५
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/065/065_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/065/065_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गोपीजनाय कथितं नियमावसाने  
@@ -20,7 +20,7 @@ title: ०६५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/065/065_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/065/065_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सम्मूर्छनाभिरुदितस्वरमण्डलाभिः  
@@ -38,7 +38,7 @@ title: ०६५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/065/065_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/065/065_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ता गेहकृत्यनिरतास्तनयप्रसक्ताः  
@@ -56,7 +56,7 @@ title: ०६५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/065/065_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/065/065_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 काश्चिन्निजाङ्गपरिभूषणमादधाना  
@@ -74,7 +74,7 @@ title: ०६५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/065/065_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/065/065_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हारं नितम्बभूवि काचन धारयन्ती  
@@ -92,7 +92,7 @@ title: ०६५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/065/065_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/065/065_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 काचित्कुचे पुनरसज्जितकञ्चुलीका  
@@ -110,7 +110,7 @@ title: ०६५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/065/065_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/065/065_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 काश्चित् गृहात् किल निरेतुमपारयन्त्य  
@@ -128,7 +128,7 @@ title: ०६५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/065/065_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/065/065_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जारात्मना न परमात्मतया स्मरन्त्यो  
@@ -146,7 +146,7 @@ title: ०६५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/065/065_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/065/065_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अभ्यागताभिरभितो व्रजसुन्दरीभि  
