--- a/laxyam/padyam/purANam/nArAyaNIyam/067.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/067.md
@@ -2,7 +2,7 @@
 title: ०६७
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/067/067_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/067/067_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्फुरत्परानन्दरसात्मकेन त्वया समासादितभोगलीलाः ।  
@@ -16,7 +16,7 @@ title: ०६७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/067/067_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/067/067_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निलीयतेऽसौ मयि मय्यमायं रमापतिर्विश्वमनोभिरामः ।  
@@ -30,7 +30,7 @@ title: ०६७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/067/067_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/067/067_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 राधाभिधां तावदजातगर्वामतिप्रियां गोपवधूं मुरारे ।  
@@ -44,7 +44,7 @@ title: ०६७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/067/067_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/067/067_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तिरोहितेऽथ त्वयि जाततापाः समं समेताः कमलायताक्ष्यः ।  
@@ -58,7 +58,7 @@ title: ०६७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/067/067_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/067/067_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हा चूत हा चम्पक कर्णिकार हा मल्लिके मालति बालवल्ल्यः ।  
@@ -72,7 +72,7 @@ title: ०६७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/067/067_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/067/067_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निरीक्षितोऽयं सखि पङ्कजाक्षः पुरो ममेत्याकुलमालपन्ती ।  
@@ -86,7 +86,7 @@ title: ०६७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/067/067_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/067/067_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वदात्मिकास्ता यमुनातटान्ते तवानुचक्रुः किल चेष्टितानि ।  
@@ -100,7 +100,7 @@ title: ०६७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/067/067_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/067/067_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततः समं ता विपिने समन्तात्तमोवतारावधि मार्गयन्त्यः ।  
@@ -114,7 +114,7 @@ title: ०६७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/067/067_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/067/067_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तथाव्यथासंकुलमानसानां व्रजाङ्गनानां करुणैकसिन्धो ।  
@@ -128,7 +128,7 @@ title: ०६७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/067/067_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/067/067_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सन्दिग्धसन्दर्शनमात्मकान्तं त्वां वीक्ष्य तन्व्यस्सहसा तदानीम् ।  
