--- a/laxyam/padyam/purANam/nArAyaNIyam/070.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/070.md
@@ -2,7 +2,7 @@
 title: ०७०
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/070/070_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/070/070_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इति त्वयि रसाकुलं रमितवल्लभे वल्लवाः  
@@ -20,7 +20,7 @@ title: ०७०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/070/070_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/070/070_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समुन्मुखमथोन्मुकैरभिहतेऽपि तस्मिन्बला  
@@ -38,7 +38,7 @@ title: ०७०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/070/070_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/070/070_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुदर्शनधर प्रभो ननु सुदर्शनाख्योऽस्म्यहं  
@@ -56,7 +56,7 @@ title: ०७०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/070/070_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/070/070_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कदापि खलु सीरिणा विहरति त्वयि स्त्रीजनै  
@@ -74,7 +74,7 @@ title: ०७०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/070/070_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/070/070_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दिनेषु च सुहृज्जनैः सह वनेषु लीलापरं  
@@ -92,7 +92,7 @@ title: ०७०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/070/070_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/070/070_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भोजराजभृतकस्त्वथ कश्चित्कष्टदुष्टपथदृष्टिररिष्टः ।  
@@ -106,7 +106,7 @@ title: ०७०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/070/070_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/070/070_07.mp3"></div>
 
 
 शाक्वरोऽथ जगतीधृतिहारी मूर्तिमेष बृहतीं प्रदधानः ।  
@@ -114,7 +114,7 @@ title: ०७०
 तुङ्गशृङ्गमुखमाश्वभियन्तं ससंगृहय्य रभसादभियं तम् ।  
 भद्ररूपमपि दैत्यमभद्रं मर्दयन्नमदयः सुरलोकम् ॥ ७०८॥
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/070/070_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/070/070_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चित्रमद्य भगवन् वृषघातात्सुस्थिराजनि वृषस्थितिरुर्व्याम् ।  
@@ -128,7 +128,7 @@ title: ०७०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/070/070_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/070/070_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 औक्षकाणि परिधावत दूरं वीक्ष्यतामयमिहोक्षविभेदी ।  
