--- a/laxyam/padyam/purANam/nArAyaNIyam/071.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/071.md
@@ -2,7 +2,7 @@
 title: ०७१
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/071/071_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/071/071_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यत्नेषु सर्वेष्वपि नावकेशी केशी स भोजेशितुरिष्टबन्धुः ।  
@@ -16,7 +16,7 @@ title: ०७१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/071/071_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/071/071_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गन्धर्वतामेष गतोऽपि रूक्षैर्नादैः समुद्वेजितसर्वलोकः ।  
@@ -30,7 +30,7 @@ title: ०७१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/071/071_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/071/071_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तार्क्ष्यार्पिताङ्घ्रेस्तव तार्क्ष्य एष चिक्षेप वक्षोभुवि नाम पादम् ।  
@@ -44,7 +44,7 @@ title: ०७१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/071/071_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/071/071_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रवञ्चयन्नस्य खुराञ्चलं द्रागमुं च विक्षेपिथ दूरदूरम् ।  
@@ -58,7 +58,7 @@ title: ०७१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/071/071_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/071/071_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वं वाहदण्डे कृतधीश्च बाहादण्डं न्यधास्तस्य मुखे तदानीम् ।  
@@ -72,7 +72,7 @@ title: ०७१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/071/071_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/071/071_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आलम्भमात्रेण पशोः सुराणां प्रसादके नूत्न इवाश्वमेधे ।  
@@ -86,7 +86,7 @@ title: ०७१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/071/071_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/071/071_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कंसाय ते शौरिसुतत्वमुक्त्वा तं तद्वधोत्कं प्रतिरुध्य वाचा ।  
@@ -100,7 +100,7 @@ title: ०७१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/071/071_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/071/071_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कदापि गोपैः सह काननान्ते निलायनक्रीडनलोलुपं त्वाम् ।  
@@ -114,7 +114,7 @@ title: ०७१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/071/071_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/071/071_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स चोरपालायितवल्लवेषु चोरायितो गोपशिशून्पशूंश्च ।  
@@ -128,7 +128,7 @@ title: ०७१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/071/071_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/071/071_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवंविधैश्चाद्भुतकेलिभेदैरानन्दमूर्छामतुलां व्रजस्य ।  
