--- a/laxyam/padyam/purANam/nArAyaNIyam/073.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/073.md
@@ -2,7 +2,7 @@
 title: ०७३
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/073/073_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/073/073_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निशमय्य तवाथ यानवार्तां भृशमार्ताः पशुपालबालिकास्ताः ।  
@@ -16,7 +16,7 @@ title: ०७३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/073/073_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/073/073_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 करुणानिधिरेषु नन्दसूनुः कथमस्मान्विसृजेदनन्यनाथाः ।  
@@ -30,7 +30,7 @@ title: ०७३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/073/073_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/073/073_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चरमप्रहरे प्रतिष्ठमानः सह पित्रा निजमित्रमण्डलैश्च ।  
@@ -44,7 +44,7 @@ title: ०७३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/073/073_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/073/073_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अचिरादुपयामि सन्निधिं वो भविता साधु मयैव सङ्गमश्रीः ।  
@@ -58,7 +58,7 @@ title: ०७३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/073/073_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/073/073_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सविषादभरं सयाञ्चमुच्चैरतिदूरं वनिताभिरीक्ष्यमाणः ।  
@@ -72,7 +72,7 @@ title: ०७३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/073/073_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/073/073_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनसा बहुलेन वल्लवानां मनसा चनुगतोऽथ वल्लभानाम् ।  
@@ -86,7 +86,7 @@ title: ०७३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/073/073_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/073/073_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नियमाय निमज्य वारिणि त्वमभिवीक्ष्याथ रथेऽपि गान्दिनेयः ।  
@@ -100,7 +100,7 @@ title: ०७३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/073/073_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/073/073_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पुनरेष निमज्य पुण्यशाली पुरुषं त्वां परमं भुजङ्गभोगे ।  
@@ -114,7 +114,7 @@ title: ०७३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/073/073_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/073/073_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स तदा परमात्मसौख्यसिन्धौ विनिमग्नः प्रणुवन्प्रकारभेदैः ।  
@@ -128,7 +128,7 @@ title: ०७३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/073/073_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/073/073_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 किमु शीतलिमा महान्जले यत्पुलकोऽसाविति चोदितेन तेन ।  
