--- a/laxyam/padyam/purANam/nArAyaNIyam/074.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/074.md
@@ -2,7 +2,7 @@
 title: ०७४
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/074/074_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/074/074_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सम्प्राप्तो मथुरां दिनार्धविगमे तत्रान्तरस्मिन्वस  
@@ -20,7 +20,7 @@ title: ०७४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/074/074_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/074/074_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वत्पादद्दुतिवत्सरागसुभगास्त्वन्मूर्तिवद्योषितः  
@@ -38,7 +38,7 @@ title: ०७४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/074/074_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/074/074_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तासामाकलयन्नपाङ्गवलनैर्मोदं प्रहर्षाद्भुत  
@@ -56,7 +56,7 @@ title: ०७४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/074/074_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/074/074_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूयो वायकमेकमायतमतिं तोषेण वेषोचितं  
@@ -74,7 +74,7 @@ title: ०७४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/074/074_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/074/074_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुब्जामब्जविलोचनां पथि पुनर्दृष्ट्वाङ्गरागे तया  
@@ -92,7 +92,7 @@ title: ०७४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/074/074_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/074/074_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावन्निश्चितवैभवास्तव विभो नात्यन्तपापा जना  
@@ -110,7 +110,7 @@ title: ०७४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/074/074_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/074/074_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एष्यामिति विमुक्तयापि भगवन्नालेपदात्र्या तया  
@@ -128,7 +128,7 @@ title: ०७४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/074/074_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/074/074_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आविष्टो नगरीं महोत्सववतीं कोदण्डशालां व्रजन्  
@@ -146,7 +146,7 @@ title: ०७४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/074/074_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/074/074_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्वः कंसक्षपणोत्सवस्य पुरतः प्रारम्भतूर्योपम  
@@ -164,7 +164,7 @@ title: ०७४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/074/074_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/074/074_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शिष्टैर्दुष्टजनैश्च दृष्टमहिमा प्रीत्या च भीत्या ततः  
