--- a/laxyam/padyam/purANam/nArAyaNIyam/075.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/075.md
@@ -2,7 +2,7 @@
 title: ०७५
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/075/075_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/075/075_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रातः सन्त्रस्तभोजक्षितिपतिवचसा प्रस्तुते मल्लतूर्ये  
@@ -20,7 +20,7 @@ title: ०७५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/075/075_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/075/075_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पापिष्ठापेहि मार्गाद्द्रुतमिति वचसा निष्ठुरक्रुद्धबुद्धे  
@@ -38,7 +38,7 @@ title: ०७५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/075/075_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/075/075_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हस्तप्राप्योऽप्यगम्यो झटिति मुनिजनस्येव धावन्गजेन्द्रं  
@@ -56,7 +56,7 @@ title: ०७५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/075/075_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/075/075_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गृह्णानं दन्तमंसे युतमथ हलिना रङ्गमङ्गाविशन्तं  
@@ -74,7 +74,7 @@ title: ०७५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/075/075_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/075/075_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पूर्णं ब्रह्मैव साक्षान्निरवधिपरमानन्दसान्द्रप्रकाशं  
@@ -92,7 +92,7 @@ title: ०७५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/075/075_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/075/075_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चाणूरो मल्लवीरस्तदनु नृपगिरा मुष्टिको मुष्टिशाली  
@@ -110,7 +110,7 @@ title: ०७५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/075/075_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/075/075_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हा धिक्कष्टं कुमारौ सुललितवपुषौ मल्लवीरौ कठोरौ  
@@ -128,7 +128,7 @@ title: ०७५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/075/075_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/075/075_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कंसस्संवार्यं तूर्यं खलमतिरविदन्कार्यमार्यान् पितॄंस्ता  
@@ -146,7 +146,7 @@ title: ०७५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/075/075_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/075/075_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सद्यो निष्पिष्टसन्धिं भुवि नरपतिमापात्य तस्योपरिष्टात्  
@@ -164,7 +164,7 @@ title: ०७५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/075/075_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/075/075_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तद्भ्रातॄनष्ट पिष्ट्वा द्रुतमथ पितरौ सन्नमन्नुग्रसेनं  
