--- a/laxyam/padyam/purANam/nArAyaNIyam/076.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/076.md
@@ -2,7 +2,7 @@
 title: ०७६
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/076/076_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गत्वा सान्दीपनिमथ चतुष्षष्टिमात्रैरहोभिः  
@@ -20,7 +20,7 @@ title: ०७६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/076/076_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्मृत्वा स्मृत्वा पशुपसुदृशः प्रेमभारप्रणुन्नाः  
@@ -38,7 +38,7 @@ title: ०७६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/076/076_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वन्माहात्म्यप्रथिमपिशुनं गोकुलं प्राप्य सायं  
@@ -56,7 +56,7 @@ title: ०७६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/076/076_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दृष्ट्वा चैनं त्वदुपमलसद्वेषभूषाभिरामं  
@@ -74,7 +74,7 @@ title: ०७६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/076/076_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रीमन् किं त्वं पितृजनकृते प्रेषितो निर्दयेन  
@@ -92,7 +92,7 @@ title: ०७६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/076/076_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रासक्रीडालुलितललितं विश्लथत्केशपाशं  
@@ -110,7 +110,7 @@ title: ०७६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/076/076_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवम्प्रायैर्विवशवचनैराकुला गोपिकास्तास्  
@@ -128,7 +128,7 @@ title: ०७६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/076/076_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वत्प्रोद्गाणैः सहितमनिशं सर्वतो गेहकृत्यं  
@@ -146,7 +146,7 @@ title: ०७६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/076/076_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 राधाया मे प्रियतममिदं मत्प्रियैवं ब्रवीति  
@@ -164,7 +164,7 @@ title: ०७६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/076/076_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एष्यामि द्रागनुपगमनं केवलं कार्यभाराद्  
@@ -182,7 +182,7 @@ title: ०७६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/076/076_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं भक्तिः सकलभुवने नेशिता न श्रुता वा  
