--- a/laxyam/padyam/purANam/nArAyaNIyam/077.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/077.md
@@ -2,7 +2,7 @@
 title: ०७७
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/077/077_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सैरन्ध्र्यास्तदनु चिरं स्मरातुराया  
@@ -20,7 +20,7 @@ title: ०७७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/077/077_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उपगते त्वयि पूर्णमनोरथां  
@@ -38,7 +38,7 @@ title: ०७७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/077/077_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पृष्टा वरं पुनरसाववृणोद्वराकी  
@@ -56,7 +56,7 @@ title: ०७७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/077/077_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततो भवान्देव निशासु कासुचिन्  
@@ -74,7 +74,7 @@ title: ०७७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/077/077_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अक्रूरमन्दिरमितोऽथ बलोद्धवाभ्या  
@@ -92,7 +92,7 @@ title: ०७७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/077/077_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विघाताज्जामातुः परमसुहृदो भोजनृपते  
@@ -110,7 +110,7 @@ title: ०७७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/077/077_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बद्धं बलादथ बलेन बलोत्तरं त्वं  
@@ -128,7 +128,7 @@ title: ०७७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/077/077_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भग्नस्स लग्नहृदयोऽपि नृपैः प्रणुन्नो  
@@ -146,7 +146,7 @@ title: ०७७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/077/077_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अष्टादशेऽस्य समरे समुपेयुषि त्वं  
@@ -164,7 +164,7 @@ title: ०७७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/077/077_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पद्भ्यां त्वं पद्ममाली चकितिव पुरान्निर्गतो धावमानो  
@@ -182,7 +182,7 @@ title: ०७७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/077/077_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एक्ष्वाकोऽहं विरक्तोऽस्म्यखिलनृपसुखे त्वत्प्रसादैककाङ्क्षी  
@@ -200,7 +200,7 @@ title: ०७७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/077/077_12.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_12.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदनु मथुरां गत्वा हत्वा चमूं यवनाहृतां  
