--- a/laxyam/padyam/purANam/nArAyaNIyam/078.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/078.md
@@ -2,7 +2,7 @@
 title: ०७८
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/078/078_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/078/078_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्रिदशवर्धकिवर्धितकौशलं त्रिदशदत्तसमस्तविभूतिमत् ।  
@@ -16,7 +16,7 @@ title: ०७८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/078/078_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/078/078_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ददुषि रेवतभूभृति रेवतीं हलभृते तनयां विधिशासनात् ।  
@@ -30,7 +30,7 @@ title: ०७८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/078/078_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/078/078_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ विदर्भसुतां खलु रुक्मिणीं प्रणयिनीं त्वयि देव सहोदरः ।  
@@ -44,7 +44,7 @@ title: ०७८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/078/078_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/078/078_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चिरधृतप्रणया त्वयि बालिका सपदि काङ्क्षितभङ्गसमाकुला ।  
@@ -58,7 +58,7 @@ title: ०७८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/078/078_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/078/078_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 द्विजसुतोऽपि च तूर्णमुपाययौ तव पुरं हि दुराशदुरासदम् ।  
@@ -72,7 +72,7 @@ title: ०७८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/078/078_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/078/078_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स च भवन्तमवोचत कुण्डिने नृपसुता खलु राजति रुक्मिणी ।  
@@ -86,7 +86,7 @@ title: ०७८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/078/078_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/078/078_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तव हृतास्मि पुरैव गुणैरहं हरति मां किल चेदिनृपोऽधुना ।  
@@ -100,7 +100,7 @@ title: ०७८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/078/078_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/078/078_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अशरणां यदि मां त्वमुपेक्षसे सपदि जीवितमेव जहाम्यहम् ।  
@@ -114,7 +114,7 @@ title: ०७८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/078/078_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/078/078_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अकथयस्त्वमथैनमये सखे तदधिका मम मन्मथवेदना ।  
@@ -128,7 +128,7 @@ title: ०७८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/078/078_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/078/078_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रमुदितेन च तेन समं तदा रथगतो लघु कुण्डिनमेयिवान् ।  
