--- a/laxyam/padyam/purANam/nArAyaNIyam/082.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/082.md
@@ -2,7 +2,7 @@
 title: ०८२
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/082/082_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/082/082_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रद्युम्नो रौक्मिणेयः स खलु तव कला शम्बरेणाहृतस्तं  
@@ -20,7 +20,7 @@ title: ०८२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/082/082_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/082/082_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बाणस्य सा बलिसुतस्य सहस्रबाहोर्माहेश्वरस्य महिता दुहिता किलोषा ।  
@@ -34,7 +34,7 @@ title: ०८२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/082/082_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/082/082_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 योगिन्यतीव कुशला खलु चित्रलेखा  
@@ -52,7 +52,7 @@ title: ०८२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/082/082_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/082/082_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कन्यापुरे दयितया सुखमारमन्तं चैनं कथञ्चन बबन्धुषि शर्वबन्धौ ।  
@@ -66,7 +66,7 @@ title: ०८२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/082/082_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/082/082_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पुरीपालः शैलप्रियदुहितृनाथोऽस्य भगवान्  
@@ -84,7 +84,7 @@ title: ०८२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/082/082_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/082/082_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निरुद्धाशेषास्त्रे मुमुहुषि तवास्त्रेण गिरिशे  
@@ -102,7 +102,7 @@ title: ०८२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/082/082_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/082/082_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चापानां पञ्चशत्या प्रसभमुपगते छिन्नचापेऽथ बाणे  
@@ -120,7 +120,7 @@ title: ०८२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/082/082_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/082/082_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बाणं नानायुधोग्रं पुनरभिपतितं दुर्पदोषाद्वितन्वन्  
@@ -138,7 +138,7 @@ title: ०८२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/082/082_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/082/082_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मुहुस्तावच्छक्रं वरुणमजयो नन्दहरणे  
@@ -156,7 +156,7 @@ title: ०८२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/082/082_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/082/082_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 द्विजरुषा कृकलासवपुर्धरं नृगनृपं त्रिदिवालयमापयन् ।  
