--- a/laxyam/padyam/purANam/nArAyaNIyam/084.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/084.md
@@ -2,7 +2,7 @@
 title: ०८४
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्वचिदथ तपनोपरागकाले पुरि निदधत्कृतवर्मकामसूनू ।  
@@ -16,7 +16,7 @@ title: ०८४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बहुतरजनताहिताय तत्र त्वमपि पुनन्विनिमज्ज्य तीर्थतोयं ।  
@@ -30,7 +30,7 @@ title: ०८४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तव खलु दयिताजनैः समेता द्रुपदसुता त्वयि गाढभक्तिभारा ।  
@@ -44,7 +44,7 @@ title: ०८४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदनु च भगवन् निरीक्ष्य गोपानतिकुतुकादुपगम्य मानयित्वा ।  
@@ -58,7 +58,7 @@ title: ०८४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सपदि च भवदीक्षणोत्सवेन प्रमुषितमानहृदां नितम्बिनीनाम् ।  
@@ -72,7 +72,7 @@ title: ०८४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रिपुजनकलहैः पुनः पुनर्मे समुपगतैरियती विलम्बन्ऽआभूत् ।  
@@ -86,7 +86,7 @@ title: ०८४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अपगतविरहव्यथास्तदा ता रहसि विधाय ददाथ तत्त्वबोधम् ।  
@@ -100,7 +100,7 @@ title: ०८४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुखरसपरिमिश्रितो वियोगः किमपि पुराभवदुद्धवोपदेशैः ।  
@@ -114,7 +114,7 @@ title: ०८४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मुनिवरनिवहैस्तवाथ पित्रा दुरितशमाय शुभानि पृच्छ्यमानैः ।  
@@ -128,7 +128,7 @@ title: ०८४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुमहति यजने वितायमाने प्रमुदितमित्रजने सहैव गोपाः ।  
@@ -142,7 +142,7 @@ title: ०८४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/084/084_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 व्यपगमसमये समेत्य राधां दृढमुपगूह्य निरीक्ष्य वीतखेदाम् ।  
