--- a/laxyam/padyam/purANam/nArAyaNIyam/085.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/085.md
@@ -2,7 +2,7 @@
 title: ०८५
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/085/085_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततो मगधभूमृता चिरनिरोधसंक्लेशितं  
@@ -20,7 +20,7 @@ title: ०८५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/085/085_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यियासुरभिमागधं तदनु नारदोदीरिता  
@@ -38,7 +38,7 @@ title: ०८५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/085/085_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अशेषदयितायुते त्वयि समागते धर्मजो  
@@ -56,7 +56,7 @@ title: ०८५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/085/085_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गिरिव्रजपुरं गतास्तदनु देव यूयं त्रयो  
@@ -74,7 +74,7 @@ title: ०८५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/085/085_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अशान्तसमरोद्धतं विटपपाटनासंज्ञया  
@@ -92,7 +92,7 @@ title: ०८५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/085/085_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रचक्रुषि युधिष्ठिरे तदनु राजसूयाध्वरं  
@@ -110,7 +110,7 @@ title: ०८५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/085/085_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततस्सवनकर्मणि प्रवरमग्र्यपूजाविधिं  
@@ -128,7 +128,7 @@ title: ०८५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/085/085_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततस्सपदि चेदिपो मुनिनृपेषु तिष्ठत्स्वहो  
@@ -146,7 +146,7 @@ title: ०८५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/085/085_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निवार्य निजपक्षगानभिमुखस्य विद्वेषिण  
@@ -164,7 +164,7 @@ title: ०८५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/085/085_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततस्सुमहितो त्वया क्रतुवरे निरूढे जनो  
@@ -182,7 +182,7 @@ title: ०८५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/085/085_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदा हसितमुत्थितं द्रुपदन्दनाभीमयो  
