--- a/laxyam/padyam/purANam/nArAyaNIyam/087.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/087.md
@@ -2,7 +2,7 @@
 title: ०८७
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/087/087_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/087/087_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुचेलनामा भवतः सतीर्थ्यतां गतः स सान्दीपनिमन्दिरे द्विजः ।  
@@ -16,7 +16,7 @@ title: ०८७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/087/087_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/087/087_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समानशीलाऽपि तदीयवल्लभा तथैव नो चित्तजयं समेयुषी ।  
@@ -30,7 +30,7 @@ title: ०८७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/087/087_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/087/087_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इतीरितोऽयं प्रियया क्षुधार्तया जुगुप्समानोऽपि धने मदावहे ।  
@@ -44,7 +44,7 @@ title: ०८७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/087/087_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/087/087_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गतोऽयमाश्चर्यमयीं भवत्पूरीं गृहेषु शैब्याभवनं समेयिवान् ।  
@@ -58,7 +58,7 @@ title: ०८७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/087/087_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/087/087_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रपूजितं तं प्रियया च वीजितं करे गृहीत्वाऽकथयः पुरा कृतम् ।  
@@ -72,7 +72,7 @@ title: ०८७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/087/087_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/087/087_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्रपाजुषोऽस्मात्पृथुकं बलादथ प्रगृह्य मुष्टौ सकृदाशिते त्वया ।  
@@ -86,7 +86,7 @@ title: ०८७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/087/087_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/087/087_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भक्तेषु भक्तेन स मानितस्त्वया पुरीं वसन्नेकनिशां महासुखम् ।  
@@ -100,7 +100,7 @@ title: ०८७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/087/087_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/087/087_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यदि ह्ययचिष्यमदास्यदच्युतो वदामि भार्यां किमिति व्रजन्नसौ ।  
@@ -114,7 +114,7 @@ title: ०८७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/087/087_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/087/087_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 किं मार्गविभ्रंश इति भ्रमन्क्षणं गृहं प्रविष्टः स ददर्श वल्लभाम् ।  
@@ -128,7 +128,7 @@ title: ०८७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/087/087_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/087/087_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स रत्नशालासु वसन्नपि स्वयं समुन्नमद्भक्तिभरोऽमृतं ययौ ।  
