--- a/laxyam/padyam/purANam/nArAyaNIyam/089.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/089.md
@@ -2,7 +2,7 @@
 title: ०८९
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/089/089_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/089/089_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रमाजाने जाने यदिह तव भक्तेषु विभवो  
@@ -20,7 +20,7 @@ title: ०८९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/089/089_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/089/089_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सद्यःप्रसादरुषितान्विधिशङ्करादीन्  
@@ -38,7 +38,7 @@ title: ०८९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/089/089_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/089/089_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शकुनिजः स हि नारदमेकदा त्वरिततोषमपृच्छदधीश्वरम् ।  
@@ -52,7 +52,7 @@ title: ०८९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/089/089_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/089/089_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तपस्तप्त्व् घोरं स खलु कुपितः सप्तमदिने  
@@ -70,7 +70,7 @@ title: ०८९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/089/089_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/089/089_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मोक्तारं बन्धमुक्तो हरिणपतिरिव प्राद्रवत्सोऽथ रुद्रं  
@@ -88,7 +88,7 @@ title: ०८९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/089/089_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/089/089_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भद्रं ते शाकुनेय भ्रमसि किमधुना त्वं पिशाचस्य वाचा  
@@ -106,7 +106,7 @@ title: ०८९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/089/089_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/089/089_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भृगुं किल सरस्वतीनिकटवासिनस्तापसा  
@@ -124,7 +124,7 @@ title: ०८९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/089/089_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/089/089_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुप्तं रमाङ्कभुवि पङ्कजलोचनं त्वां  
@@ -142,7 +142,7 @@ title: ०८९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/089/089_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/089/089_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निश्चित्य ते च सुदृढं त्वयि बद्धभावाः  
@@ -160,7 +160,7 @@ title: ०८९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/089/089_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/089/089_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जगत्सृष्ट्यादौ त्वां निगमनिवहैर्वन्दिभिरिव  
