--- a/laxyam/padyam/purANam/nArAyaNIyam/091.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/091.md
@@ -2,7 +2,7 @@
 title: ०९१
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/091/091_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/091/091_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रीकृष्ण त्वत्पदोपासनमभयतमं बद्धमिथ्यार्थदृष्टे  
@@ -20,7 +20,7 @@ title: ०९१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/091/091_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/091/091_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूमन् कायेन वाचा मुहुरपि मनसा त्वद्बलप्रेरितात्मा  
@@ -38,7 +38,7 @@ title: ०९१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/091/091_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/091/091_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भीतिर्नाम द्वितीयाद्भवति ननु मनःकल्पितं च द्वितीयं  
@@ -56,7 +56,7 @@ title: ०९१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/091/091_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/091/091_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भक्तेरुत्पत्तिवृद्धी तव चरणजुषं सङ्गमेनैव पुंसा  
@@ -74,7 +74,7 @@ title: ०९१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/091/091_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/091/091_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रेयोमार्गेषु भक्तावधिकबहुमतिर्जन्मकर्माणि भूयो  
@@ -92,7 +92,7 @@ title: ०९१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/091/091_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/091/091_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूतान्येतानि भूतात्मकमपि सकलं पक्षिमत्स्यान्मृगादीन्  
@@ -110,7 +110,7 @@ title: ०९१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/091/091_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/091/091_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नो मुह्यन्क्षुत्तृडाद्यैर्भवसरणिभवैस्त्वन्निलीनाशयत्वा  
@@ -128,7 +128,7 @@ title: ०९१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/091/091_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/091/091_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूतेष्वेषु त्वदैक्यस्मृतिसमधिगतौ नाधिकारोऽधुना चेत्  
@@ -146,7 +146,7 @@ title: ०९१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/091/091_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/091/091_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आवृत्य त्वत्स्वरूपं क्षितिजलमरुदाद्यात्मना विक्षिपन्ती  
@@ -164,7 +164,7 @@ title: ०९१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/091/091_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/091/091_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दुःखान्यालोक्य जन्तुष्वलमुदितविवेकोऽहमाचार्यवर्या  
