--- a/laxyam/padyam/purANam/nArAyaNIyam/093.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/093.md
@@ -2,7 +2,7 @@
 title: ०९३
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/093/093_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/093/093_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बन्धुस्नेहं विजह्यां तव हि करुणया त्वय्युपावेशितात्मा  
@@ -20,7 +20,7 @@ title: ०९३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/093/093_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/093/093_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्षुत्तृष्णालोपमात्रे सततकृतधियो जन्तवस्सन्त्यनन्ता  
@@ -38,7 +38,7 @@ title: ०९३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/093/093_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/093/093_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वत्कारुण्ये प्रवृत्ते क इव न हि गुरुर्लोकवृत्तेऽपि भूमन्  
@@ -56,7 +56,7 @@ title: ०९३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/093/093_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/093/093_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्वच्छः स्यां पावनोऽहं मधुर उदकवद्वह्निवन्मा स्म गृह्णां  
@@ -74,7 +74,7 @@ title: ०९३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/093/093_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/093/093_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्नेहाद्व्याधास्तपुत्रप्रणयमृतकपोतायितो मा स्म भूवं  
@@ -92,7 +92,7 @@ title: ०९३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/093/093_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/093/093_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मा बध्यासं तरुण्या गज इव वशया नार्जयेयं धनौघं  
@@ -110,7 +110,7 @@ title: ०९३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/093/093_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/093/093_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वर्तेय त्यक्तमानः सुखमतिशिशुवन्निस्सहायश्चरेयं  
@@ -128,7 +128,7 @@ title: ०९३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/093/093_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/093/093_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वय्येव त्वत्कृतं त्वं क्षपयसि जगदित्यूर्णनाभात्प्रतीयां  
@@ -146,7 +146,7 @@ title: ०९३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/093/093_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/093/093_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ही ही मे देहमोहं त्यज पवनपुराधीश यत्प्रेमहेतो  
@@ -164,7 +164,7 @@ title: ०९३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/093/093_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/093/093_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दुर्वारो देहमोहो यदि पुनरधुना तर्हि निश्शेषरोगान्  
