--- a/laxyam/padyam/purANam/nArAyaNIyam/094.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/094.md
@@ -2,7 +2,7 @@
 title: ०९४
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/094/094_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/094/094_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शुद्धा निष्कामधर्मैः प्रवरगुरुगिरा तत्स्वरूपं परं ते  
@@ -20,7 +20,7 @@ title: ०९४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/094/094_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/094/094_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आचार्याख्याधरस्थारणिसमनुमिलच्छिष्यरूपोत्तरार  
@@ -38,7 +38,7 @@ title: ०९४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/094/094_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/094/094_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं त्वत्प्राप्तितोऽन्यो नहि खलु निखिलक्लेशहानेरुपायो  
@@ -56,7 +56,7 @@ title: ०९४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/094/094_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/094/094_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वल्लोकादन्यलोकः क्वनु भयरहितो यत्परार्धद्वयान्ते  
@@ -74,7 +74,7 @@ title: ०९४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/094/094_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/094/094_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 याथार्थ्यात्त्वन्मयस्यैव हि मम न विभो वस्तुतो बन्धमोक्षौ  
@@ -92,7 +92,7 @@ title: ०९४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/094/094_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/094/094_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जीवन्मुक्तत्वमेवंविधमिति वचसा किं फलं दूरदूरे  
@@ -110,7 +110,7 @@ title: ०९४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/094/094_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/094/094_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शब्दब्रह्मण्यपीह प्रयतितमनसस्त्वां न जानन्ति केचित्  
@@ -126,7 +126,7 @@ title: ०९४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/094/094_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/094/094_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यो यावान्यादृशो वा त्वमिति किमपि नैवावगच्छामि भूम  
@@ -144,7 +144,7 @@ title: ०९४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/094/094_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/094/094_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यद्यल्लभ्येत तत्तत्तव समुपहृतं देव दासोऽस्मि तेऽहं  
@@ -162,7 +162,7 @@ title: ०९४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/094/094_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/094/094_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ऐक्यं ते दानोहोमव्रतनियमतपस्साङ्ख्ययोगैर्दुरापं  
