--- a/laxyam/padyam/purANam/nArAyaNIyam/095.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/095.md
@@ -2,7 +2,7 @@
 title: ०९५
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/095/095_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/095/095_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आदौ हैरण्यगर्भीं तनुमविकलजीवात्मिकामास्थितस्त्वं  
@@ -20,7 +20,7 @@ title: ०९५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/095/095_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/095/095_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सत्त्वोन्मेषात्कदाचित्खलु विषयरसे दोषबोधेऽपि भूमन्  
@@ -38,7 +38,7 @@ title: ०९५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/095/095_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/095/095_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सन्ति श्रेयांसि भूयांस्यपि रुचिभिदया कर्मिणां निर्मितानि  
@@ -56,7 +56,7 @@ title: ०९५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/095/095_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/095/095_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वद्भक्त्या तुष्टबुद्धेः सुखमिह चरतो विच्युताशस्य चाशाः  
@@ -74,7 +74,7 @@ title: ०९५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/095/095_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/095/095_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वद्भक्तो बाध्यमानोऽपि च विषयरसैरिन्द्रियाशान्तिहेतो  
@@ -92,7 +92,7 @@ title: ०९५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/095/095_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/095/095_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चित्तार्द्रीभाववमुच्चैर्वपुषि च पुलकं हर्षबाष्पञ्च हित्वा  
@@ -110,7 +110,7 @@ title: ०९५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/095/095_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/095/095_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ध्यानं ते शीलयेयं समतनुसुखबद्धासनो नासिकाग्र  
@@ -128,7 +128,7 @@ title: ०९५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/095/095_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/095/095_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आनीलश्लक्ष्णकेशं ज्वलितमकरसत्कुण्डलं मन्दहास  
@@ -146,7 +146,7 @@ title: ०९५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/095/095_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/095/095_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सर्वाङ्गेष्वङ्गरङ्गत्कुतुकमतिमुहुर्धारयन्नीश चित्तं  
@@ -164,7 +164,7 @@ title: ०९५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/095/095_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/095/095_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इत्थं त्वद्ध्यानयोगे सति पुनरणिमाद्यष्टसंसिद्धयस्ता  
