--- a/laxyam/padyam/purANam/nArAyaNIyam/097.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/097.md
@@ -2,7 +2,7 @@
 title: ०९७
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/097/097_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/097/097_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्रैगुण्याद्भिन्नरूपं भवति हि भुवने हीनमध्योत्तमं यत्  
@@ -20,7 +20,7 @@ title: ०९७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/097/097_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/097/097_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वय्येव न्यस्तचित्तः सुखमयि विचरन्सर्वचेष्टास्त्वदर्थं  
@@ -38,7 +38,7 @@ title: ०९७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/097/097_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/097/097_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वद्भावो यावदेषु स्फुरति न विशदं तावदेवं ह्युपास्तिं  
@@ -56,7 +56,7 @@ title: ०९७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/097/097_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/097/097_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तञ्चैनं भक्तियोगं द्रढयितुमयि मे साध्यमारोग्यमायु  
@@ -74,7 +74,7 @@ title: ०९७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/097/097_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/097/097_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मार्कण्डेयश्चिरायुस्स खलु पुनरपि त्वत्परः पुष्पभद्रा  
@@ -92,7 +92,7 @@ title: ०९७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/097/097_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/097/097_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रीत्या नारायणाख्यस्त्वमथ नरसखः प्राप्तवानस्य पार्श्वं  
@@ -110,7 +110,7 @@ title: ०९७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/097/097_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/097/097_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 याते त्वय्याशु वाताकुलजलदगलत्तोयपूर्णातिघूर्ण  
@@ -128,7 +128,7 @@ title: ०९७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/097/097_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/097/097_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दृष्ट्वा त्वां हृष्टरोमा त्वरितमभिगतः स्प्रष्टुकामो मुनीन्द्रः  
@@ -146,7 +146,7 @@ title: ०९७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/097/097_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/097/097_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गौर्या सार्धं तदग्रे पुरभिदथ गतस्त्वत्प्रियप्रेक्षणार्थी  
@@ -164,7 +164,7 @@ title: ०९७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/097/097_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/097/097_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्र्यंशेऽस्मिन्सत्यलोके विधिहरिपुरभिन्मन्दिराण्यूर्ध्वमूर्ध्वं  
