--- a/laxyam/padyam/purANam/nArAyaNIyam/098.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/098.md
@@ -2,7 +2,7 @@
 title: ०९८
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/098/098_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यस्मिन्नेतद्विभातं यत इदमभवद्येन चेदं य एत  
@@ -20,7 +20,7 @@ title: ०९८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/098/098_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जन्माथो कर्म नाम स्फुटमिह गुणदोषादिकं वा न यस्मिन्  
@@ -38,7 +38,7 @@ title: ०९८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/098/098_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नो तिर्यञ्चन्न मर्त्यं न च सुरमसुरं न स्त्रियं नो पुमांसं  
@@ -56,7 +56,7 @@ title: ०९८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/098/098_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मायायां बिम्बितस्त्वं सृजसि महदहङ्कारतन्मात्रभेदै  
@@ -74,7 +74,7 @@ title: ०९८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/098/098_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शब्दब्रह्मेति कर्मेत्यणुरिति भगवन् काल इत्यालपन्ति  
@@ -92,7 +92,7 @@ title: ०९८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/098/098_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सत्त्वेनासत्तया वा न च खलु सदसत्त्वेन निर्वाच्यरूपा  
@@ -110,7 +110,7 @@ title: ०९८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/098/098_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूषासु स्वर्णवद्वा जगति घटशरावादिके मृत्तिकावत्  
@@ -128,7 +128,7 @@ title: ०९८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/098/098_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यद्भीत्योदेति सूर्यो दहति च दहनो वाति वायुस्तथान्ये  
@@ -146,7 +146,7 @@ title: ०९८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/098/098_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्रैलोक्यं भावयन्तं त्रिगुणमयमिदं त्र्यक्षरस्यैकवाच्यं  
@@ -164,7 +164,7 @@ title: ०९८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/098/098_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सत्यं शुद्धं विबुद्धं जयति तव वपुर्नित्यमुक्तं निरीहं  
@@ -182,7 +182,7 @@ title: ०९८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/098/098_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दुर्वारं द्वादशारं त्रिशतपरिमिलत्षष्टिपर्वाभिवीतं  
