--- a/laxyam/padyam/purANam/nArAyaNIyam/100.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/100.md
@@ -2,7 +2,7 @@
 title: १००
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/100/100_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/100/100_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अग्रे पश्यामि तेजो निबिडतरकलायावलीलोभनीयं  
@@ -20,7 +20,7 @@ title: १००
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/100/100_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/100/100_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नीलाभं कुञ्चिताग्रं घनममलतरं संयतं चारुभङ्ग्या  
@@ -38,7 +38,7 @@ title: १००
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/100/100_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/100/100_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हृद्यं पूर्णानुकम्पार्णवमृदुलहरीचञ्चलभ्रूविलासै  
@@ -56,7 +56,7 @@ title: १००
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/100/100_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/100/100_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्तुङ्गोल्लासिनासं हरिमणिमुकुरप्रोल्लसद्गण्डपाली  
@@ -74,7 +74,7 @@ title: १००
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/100/100_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/100/100_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बाहुद्वन्द्वेन रत्नोज्वलवलयभृता शोणपाणिप्रवाले  
@@ -92,7 +92,7 @@ title: १००
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/100/100_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/100/100_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्सर्पत्कौस्तुभश्रीततिभिररुणितं कोमलं कण्ठदेशं  
@@ -110,7 +110,7 @@ title: १००
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/100/100_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/100/100_07.mp3"></div>
 
 
 अङ्गे पञ्चाङ्गरागैरतिशयविकसत्सौरभाकृष्टलोकं  
@@ -122,7 +122,7 @@ title: १००
 आनम्राणां पुरस्तान्न्यसनधृतसमस्तार्थपालीसमुद्ग  
 च्छायां जानुद्वयं च क्रमपृथुलमनोज्ञे च जङ्घे निषेवे ॥ १००८,॥
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/100/100_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/100/100_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मञ्जीरं मञ्जुनादैरिव पदभजनं श्रेय इत्यालपन्तं  
@@ -140,7 +140,7 @@ title: १००
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/100/100_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/100/100_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 योगीन्द्राणां त्वदङ्गेष्वधिकसुमधुरं मुक्तिभाजां निवासो  
@@ -158,7 +158,7 @@ title: १००
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/100/100_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/100/100_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अज्ञात्वा ते महत्त्वं यदिह निगदितं विश्वनाथ क्षमेथाः  
