--- a/laxyam/padyam/purANam/nArAyaNIyam/001.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/001.md
@@ -3,7 +3,7 @@ title: ००१ विष्णुस्तुतिः
 unicode_script: devanagari  
 ---
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/001/001_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/001/001_01.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -20,7 +20,7 @@ unicode_script: devanagari
 तत्तावद्भाति साक्षाद्गुरुपवनपुरे हन्त भाग्यं जनानाम् ॥ १-१॥
 </details>
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/001/001_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/001/001_02.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,7 +37,7 @@ unicode_script: devanagari
 निश्शेषात्मानमेनं गुरुपवनपुराधीशमेवाश्रयामः ॥ १-२॥
 </details>
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/001/001_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/001/001_03.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -54,7 +54,7 @@ unicode_script: devanagari
 तस्मिन् धन्या रमन्ते श्रुतिमतिमधुरे सुग्रहे विग्रहे ते ॥ १-३॥
 </details>
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/001/001_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/001/001_04.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -71,7 +71,7 @@ unicode_script: devanagari
 कस्मान्नो निष्कलस्त्वं सकल इति वचस्त्वत्कलास्वेव भूमन् ॥ १-४॥
 </details>
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/001/001_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/001/001_05.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -88,7 +88,7 @@ unicode_script: devanagari
 स त्वं धृत्वा दधासि स्वमहिमविभवाकुण्ठ वैकुण्ठरूपम् ॥ १-५॥
 </details>
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/001/001_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/001/001_06.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -105,7 +105,7 @@ unicode_script: devanagari
 सिञ्चत्सञ्चिन्तकानां वपुरनुकलये मारुतागारनाथ ॥ १-६॥
 </details>
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/001/001_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/001/001_07.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -122,7 +122,7 @@ unicode_script: devanagari
 नेत्रैः श्रोत्रैश्च पीत्वा परमरससुधाम्भोधिपूरे रमेरन् ॥ १-७॥
 </details>
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/001/001_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/001/001_08.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -139,7 +139,7 @@ unicode_script: devanagari
 क्षुद्रं तं शक्रवाटीद्रुममभिलषति व्यर्थमर्थिव्रजोऽयम् ॥ १-८॥
 </details>
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/001/001_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/001/001_09.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -156,7 +156,7 @@ unicode_script: devanagari
 त्वं चात्माराम एवेत्यतुलगुणगणाधार शौरे नमस्ते ॥ १-९॥
 </details>
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/001/001_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/001/001_10.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
