--- a/laxyam/padyam/purANam/nArAyaNIyam/002.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/002.md
@@ -2,7 +2,7 @@
 title: ००२ वपुषि भक्तिः
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/002/002_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सूर्यस्पर्धिकिरीटम् ऊर्ध्वतिलक-प्रोद्भासिफालान्तरं  
@@ -20,7 +20,7 @@ title: ००२ वपुषि भक्तिः
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/002/002_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 केयूराङ्गद-कङ्कणोत्तम-महा-रत्नाङ्गुलीयाङ्कित-  
@@ -38,7 +38,7 @@ title: ००२ वपुषि भक्तिः
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/002/002_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यत् त्रैलोक्यमहीयसो ऽपि महितं सम्मोहनं मोहनात्  
@@ -56,7 +56,7 @@ title: ००२ वपुषि भक्तिः
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/002/002_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तत् तादृङ् मधुरात्मकं तव वपुः सम्प्राप्य संपन्मयी  
@@ -74,7 +74,7 @@ title: ००२ वपुषि भक्तिः
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/002/002_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 लक्ष्मीस् तावक-रामणीयक-हृतैवेयं परेष्वस्थिरे-  
@@ -92,7 +92,7 @@ title: ००२ वपुषि भक्तिः
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/002/002_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवंभूत-मनोज्ञता-नवसुधा-निष्यन्द-सन्दोहनं  
@@ -110,7 +110,7 @@ title: ००२ वपुषि भक्तिः
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/002/002_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवम्भूततया हि **भक्त्यभिहितो योगः** स योगद्वयात्  
@@ -128,7 +128,7 @@ title: ००२ वपुषि भक्तिः
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/002/002_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निष्कामं नियत-स्वधर्म-चरणं यत् कर्मयोगाभिधं  
@@ -146,7 +146,7 @@ title: ००२ वपुषि भक्तिः
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/002/002_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अत्यायास-कराणि कर्मपटलान्य् आचर्य निर्यन्मला  
@@ -164,7 +164,7 @@ title: ००२ वपुषि भक्तिः
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/002/002_10.mp3"></div><details open><summary>विश्वास-प्रस्तुतिः</summary>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/002/002_10.mp3"></div><details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 **त्वद्-भक्तिस्** तु कथा-रसामृत-झरी-निर्मज्जनेन स्वयं  
 सिद्ध्यन्ती, विमल-प्रषोध-पदवीम् अक्लेशतस् तन्वती ।  
