--- a/laxyam/padyam/purANam/nArAyaNIyam/004.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/004.md
@@ -2,7 +2,7 @@
 title: ००४
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/004/004_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कल्यताम् मम कुरुष्व तावतीं कल्यते भवदुपासनं यया।  
@@ -16,7 +16,7 @@ title: ००४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/004/004_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ब्रह्मचर्यद्रुढतादिभिर्यमैराप्लवादिनियमैश्च पाविताः।  
@@ -30,7 +30,7 @@ title: ००४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/004/004_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तारमन्तरनुचिन्त्य सन्ततं प्राणवायुमभियम्य निर्मलाः।  
@@ -44,7 +44,7 @@ title: ००४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/004/004_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अस्फुटे वपुषि ते प्रयत्नतो धारयेम धिषणां मुहुर्मुहुः।  
@@ -58,7 +58,7 @@ title: ००४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/004/004_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विस्पुटावयवभेदसुन्दरं त्वद्वपुस्सुचिरशीलनावशात।  
@@ -72,7 +72,7 @@ title: ००४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/004/004_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ध्यायतां सकलमूर्तिमीद्रुशीमुन्मिषन्मधुरताहृतात्मनाम।  
@@ -86,7 +86,7 @@ title: ००४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/004/004_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तत्समास्वदनरूपिणीं स्थितिं त्वत्समाधिमयि विश्वनायक।  
@@ -100,7 +100,7 @@ title: ००४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/004/004_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इत्थमभ्यसननिर्भरोल्लसत्वत्परात्मसुखकल्पितोत्सवाः।  
@@ -114,7 +114,7 @@ title: ००४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/004/004_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वत्समाधिविजये तु यः पुनर्मङ्क्षु मोक्षरसिकः क्रमेण वा।  
@@ -128,7 +128,7 @@ title: ००४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/004/004_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 लिङ्गदेहमपि संत्यजन्नथो लीयते त्वयि परे निराग्रहः।  
@@ -142,7 +142,7 @@ title: ००४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/004/004_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अग्निवासरवलर्क्षपक्षगैरुत्तरायणजुषा च दैवतैः।  
@@ -156,7 +156,7 @@ title: ००४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/004/004_12.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_12.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आस्थितोऽथ महरालये यदा शेषवक्त्रदहनोष्मणाऽऽर्द्यते।  
@@ -170,7 +170,7 @@ title: ००४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/004/004_13.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_13.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तत्र वा तव पदेऽथवा वसन् प्राकृतप्रलय एति मुक्ततां ।  
@@ -184,7 +184,7 @@ title: ००४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/004/004_14.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_14.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तस्य अ क्षितिपयोमहोनिलद्योमहत्प्रकृतिसप्तकावृतीः ।  
@@ -198,7 +198,7 @@ title: ००४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/004/004_15.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_15.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अर्चिरादिगतिमीद्रुशीं व्रजन् विच्युतिं न भजते जगत्पते ।  
