--- a/laxyam/padyam/purANam/nArAyaNIyam/005.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/005.md
@@ -2,7 +2,7 @@
 title: ००५
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/005/005_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/005/005_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 व्यक्ताव्यक्तमिदं न किञ्चिदभवत्प्राक्प्राकृतप्रक्षये  
@@ -20,7 +20,7 @@ title: ००५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/005/005_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/005/005_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कालः कर्मगुणाश्च जीवनिवहा विश्वं च कार्यं विभोः  
@@ -38,7 +38,7 @@ title: ००५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/005/005_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/005/005_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं च द्विपरार्धकालविगतावीक्षां सिसृक्षात्मिकां  
@@ -56,7 +56,7 @@ title: ००५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/005/005_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/005/005_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मायासन्निहितोऽप्रविष्टवपुषा साक्षीति गीतो भवान्  
@@ -74,7 +74,7 @@ title: ००५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/005/005_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/005/005_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तत्रासौ त्रिगुणात्मकोऽपि च महान् सत्वप्रधानः स्वयं  
@@ -92,7 +92,7 @@ title: ००५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/005/005_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/005/005_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सोऽहं च त्रिगुणक्रमात् त्रिविधतामासाद्य वैकारिको  
@@ -110,7 +110,7 @@ title: ००५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/005/005_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/005/005_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूमन्मानसभुद्ध्यहंकृतिमिलच्चित्ताख्यवृत्यन्वितं  
@@ -128,7 +128,7 @@ title: ००५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/005/005_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/005/005_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शब्दाद्व्योम ततः ससर्जिथ विभो स्पर्शं ततो मारुतं  
@@ -146,7 +146,7 @@ title: ००५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/005/005_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/005/005_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एते भूतगणास्तथेन्द्रियगणा देवाश्च जाता पृथङ्  
@@ -164,7 +164,7 @@ title: ००५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/005/005_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/005/005_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अण्डं तत्खलु पूर्वसृष्टसलिलेऽतिष्ठत् सहस्रं समाः  
