--- a/laxyam/padyam/purANam/nArAyaNIyam/010.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/010.md
@@ -2,7 +2,7 @@
 title: ०१०
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/010/010_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/010/010_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वैकुण्ठ वर्धितबलोऽथ भवत्प्रसादा  
@@ -20,7 +20,7 @@ title: ०१०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/010/010_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/010/010_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मिथ्याग्रहास्मिमतिरागविकोपभीति  
@@ -38,7 +38,7 @@ title: ०१०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/010/010_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/010/010_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावत्ससर्ज मनसा सनकं सनन्दं  
@@ -56,7 +56,7 @@ title: ०१०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/010/010_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/010/010_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावत्प्रकोपमुदितं प्रतिरुन्धतोऽस्य  
@@ -74,7 +74,7 @@ title: ०१०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/010/010_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/010/010_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एकादशाह्वयतया च विभिन्नरूपं  
@@ -92,7 +92,7 @@ title: ०१०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/010/010_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/010/010_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रुद्राभिसृष्टभयदाकृतिरुद्रसंघ  
@@ -110,7 +110,7 @@ title: ०१०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/010/010_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/010/010_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तस्याथ सर्गरसिकस्य मरीचिरत्रि  
@@ -128,7 +128,7 @@ title: ०१०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/010/010_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/010/010_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 धर्मादिकानभ्सृजन्नथ कर्दमं च  
@@ -146,7 +146,7 @@ title: ०१०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/010/010_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/010/010_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वेदान्पुराणनिवहानपि सर्वविद्याः  
@@ -164,7 +164,7 @@ title: ०१०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/010/010_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/010/010_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जानन्नुपायमथ देहमजो विभज्य  
