--- a/laxyam/padyam/purANam/nArAyaNIyam/011.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/011.md
@@ -2,7 +2,7 @@
 title: ०११
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/011/011_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/011/011_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्रमेण सर्गे परिवर्धमाने कदापि दिव्याः सनकादयस्ते ।  
@@ -16,7 +16,7 @@ title: ०११
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/011/011_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/011/011_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मनोज्ञनौश्रेयसकाननाद्यैरनेकवापमिणिमन्दिरैश्च ।  
@@ -30,7 +30,7 @@ title: ०११
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/011/011_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/011/011_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भवद्दिदृक्षून्भवनं विविक्षून्द्वाःस्थौ जयस्थान् विजयोऽप्यरुन्धाम् ।  
@@ -44,7 +44,7 @@ title: ०११
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/011/011_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/011/011_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वैकुण्ठलोकानुचितप्रचेष्तौ कष्टौ युवां दैत्यगतिं भजेतम् ।  
@@ -58,7 +58,7 @@ title: ०११
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/011/011_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/011/011_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तेदेतदाज्ञाय भवानवाप्तः सहैव लक्ष्म्या बहिरंबुजाक्ष ।  
@@ -72,7 +72,7 @@ title: ०११
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/011/011_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/011/011_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रसाद्य गीर्भिः स्तुवतो मुनीन्द्राननन्यनाथावथ पार्षदौ तौ  
@@ -86,7 +86,7 @@ title: ०११
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/011/011_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/011/011_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वदीयभृत्यावथ काश्यपात्तौ सुरारिवीरावुदितौ दितौ द्वौ ।  
@@ -100,7 +100,7 @@ title: ०११
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/011/011_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/011/011_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हिरण्यपूर्वः कशिपुः किलैकः पुरो हिरण्याक्ष इति प्रतीतः ।  
@@ -114,7 +114,7 @@ title: ०११
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/011/011_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/011/011_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तयोर्हिरण्याक्षमहासुरेन्द्रो रणाय धावन्ननवाप्तवैरी ।  
@@ -128,7 +128,7 @@ title: ०११
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/011/011_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/011/011_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततो जलेशात्सदृशं भवन्तं निशम्य बभ्राम गवेषयंस्त्वाम् ।  
