--- a/laxyam/padyam/purANam/nArAyaNIyam/012.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/012.md
@@ -2,7 +2,7 @@
 title: ०१२
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/012/012_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/012/012_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्वायम्भुवो मनुरथो जनसर्गशीलो  
@@ -20,7 +20,7 @@ title: ०१२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/012/012_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/012/012_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कष्टं प्रजाः सृजति मय्यवन्र्निमग्ना  
@@ -38,7 +38,7 @@ title: ०१२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/012/012_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/012/012_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हा हा विभो जलमहं न्यपिबं पुरस्ताद्  
@@ -56,7 +56,7 @@ title: ०१२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/012/012_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/012/012_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अङ्गुष्ठमात्रवपुरुत्पतितः पुरस्तात्  
@@ -74,7 +74,7 @@ title: ०१२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/012/012_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/012/012_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कोऽसावचिन्त्यमहिमा किटिरुत्थितो मे  
@@ -92,7 +92,7 @@ title: ०१२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/012/012_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/012/012_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तं ते निनादमुपकर्ण्य जनस्तपःस्थाः  
@@ -110,7 +110,7 @@ title: ०१२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/012/012_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/012/012_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ऊर्ध्वप्रसारिपरिधूम्राविधूतरोमा  
@@ -128,7 +128,7 @@ title: ०१२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/012/012_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/012/012_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अन्तर्जलं तदनु सङ्कुलनक्रचक्रं  
@@ -146,7 +146,7 @@ title: ०१२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/012/012_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/012/012_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दृष्ट्वाऽथ दैत्यहतकेन रसातलान्ते  
@@ -164,7 +164,7 @@ title: ०१२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/012/012_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/012/012_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अभ्युद्धरन्नथ धरां दशनाग्रलग्न  
