--- a/laxyam/padyam/purANam/nArAyaNIyam/020.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/020.md
@@ -2,7 +2,7 @@
 title: ०२०
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/020/020_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/020/020_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रियव्रतस्य प्रियपुत्रभूतादाग्नीध्रराजादुदितो हि नाभिः ।  
@@ -16,7 +16,7 @@ title: ०२०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/020/020_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/020/020_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अभिष्टुतस्तत्र मुनीश्वरैस्त्वं राज्ञा स्वतुल्यं सुतमर्थ्यमानः ।  
@@ -30,7 +30,7 @@ title: ०२०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/020/020_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/020/020_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नाभिप्रियायामथ मेरुदेव्यां त्वमंशतोऽभूरृषभाभिधानः ।  
@@ -44,7 +44,7 @@ title: ०२०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/020/020_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/020/020_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वयि त्रिलोकीभृति राज्य्भारं निधाय नाभिः सह मेरुदेव्या ।  
@@ -58,7 +58,7 @@ title: ०२०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/020/020_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/020/020_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इन्द्रस्त्वदुत्कर्षकृतादमर्षाद्ववर्ष नास्मिन्नजनाभवर्षे ।  
@@ -72,7 +72,7 @@ title: ०२०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/020/020_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/020/020_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जितेन्द्रदत्तां कमनीं जयन्तीमथोद्वहन्नात्मरताशयोऽपि ।  
@@ -86,7 +86,7 @@ title: ०२०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/020/020_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/020/020_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नवाभवन्योगिवरा नवान्ये त्वपालयन्भारतवर्षखण्डान् ।  
@@ -100,7 +100,7 @@ title: ०२०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/020/020_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/020/020_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उक्त्वा सुतेभ्योऽथ मुनीन्द्रमध्ये विरक्तिभक्त्यन्वितमुक्तिमार्गम् ।  
@@ -114,7 +114,7 @@ title: ०२०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/020/020_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/020/020_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 परात्मभूतोऽपि परोपदेशं कुर्वन्भवन्सर्वनिरस्यमानः ।  
@@ -128,7 +128,7 @@ title: ०२०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/020/020_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/020/020_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शयुव्रतं गोमृगकाकचर्यां चिरं चरन्नाप्य परं स्वरूपम् ।  
