--- a/laxyam/padyam/purANam/nArAyaNIyam/024.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/024.md
@@ -2,7 +2,7 @@
 title: ०२४
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/024/024_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/024/024_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हिरण्याक्षे पोत्रीप्रवरवपुषा देव भवता  
@@ -20,7 +20,7 @@ title: ०२४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/024/024_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/024/024_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विधातारं घोरं स खलु तपसित्वा नचिरतः  
@@ -38,7 +38,7 @@ title: ०२४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/024/024_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/024/024_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निहन्तुं त्वां भूयस्तव पदमवाप्तस्य च रिपोर्  
@@ -56,7 +56,7 @@ title: ०२४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/024/024_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/024/024_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततोऽस्य प्रह्लादः समजनि सुतो गर्भवसतौ  
@@ -74,7 +74,7 @@ title: ०२४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/024/024_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/024/024_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुरारीणां हास्यं तव चरणदास्यं निजसुते  
@@ -92,7 +92,7 @@ title: ०२४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/024/024_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/024/024_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अधीतेषु श्रेष्ठं किमिति परिपृष्टेऽथ तनये  
@@ -110,7 +110,7 @@ title: ०२४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/024/024_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/024/024_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स शूलैराविद्धः सुबहु मथितो दिग्गजगणैर्  
@@ -128,7 +128,7 @@ title: ०२४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/024/024_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/024/024_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततः शङ्काविष्टः स पुनरतिदुष्टोऽस्य जनको  
@@ -146,7 +146,7 @@ title: ०२४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/024/024_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/024/024_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पिता षृण्वन्बालप्रकरमखिलं त्वत्स्तुतिपरं  
@@ -164,7 +164,7 @@ title: ०२४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/024/024_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/024/024_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अरे क्वासौ क्वासौ सकलजगदात्मा हरिरिति  
