--- a/laxyam/padyam/purANam/nArAyaNIyam/028.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/028.md
@@ -2,7 +2,7 @@
 title: ०२८
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/028/028_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/028/028_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गरलं तरलानलं पुरस्ताज्जलधेरुद्विजगाल कालकूटम् ।  
@@ -16,7 +16,7 @@ title: ०२८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/028/028_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/028/028_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विमथत्सु सुरासुरेषु जाता सुरभिस्तामृषिषु न्यधास्त्रिधामन् ।  
@@ -30,7 +30,7 @@ title: ०२८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/028/028_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/028/028_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जगदीश भवत्परा तदानीं कमनीया कमला बभूव देवी ।  
@@ -44,7 +44,7 @@ title: ०२८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/028/028_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/028/028_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वयि दत्तहृद्दे तदैव देव्यै त्रिदशेन्द्रो मणिपीठिकां व्यतारीत् ।  
@@ -58,7 +58,7 @@ title: ०२८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/028/028_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/028/028_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अभिषेकजलानुपातिमुग्धत्वदपाङ्गैरवभूषिताङ्गवल्लीम् ।  
@@ -72,7 +72,7 @@ title: ०२८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/028/028_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/028/028_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वरणस्रजमात्तभृङ्गनादां दधती सा कुचकुम्भमन्दयाना ।  
@@ -86,7 +86,7 @@ title: ०२८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/028/028_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/028/028_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गिरिश द्रुहिणादिसर्वदेवान् गुणभाजोऽप्यविमुक्तदोषलेशान् ।  
@@ -100,7 +100,7 @@ title: ०२८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/028/028_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/028/028_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उरसा तरसा ममानिथैनां भुवनानां जननीमनन्यभावाम् ।  
@@ -114,7 +114,7 @@ title: ०२८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/028/028_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/028/028_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अतिमोहनविभ्रमा तदानीं मदयन्ती खलु वारुणी निरागात् ।  
@@ -128,7 +128,7 @@ title: ०२८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/028/028_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/028/028_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तरुणाम्बुदसुन्दरस्तदा त्वं ननु धन्वन्तरिरुत्थितोऽम्बुराशेः ।  
