--- a/laxyam/padyam/purANam/nArAyaNIyam/029.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/029.md
@@ -2,7 +2,7 @@
 title: ०२९
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/029/029_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/029/029_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उद्गच्छतस्तव करादमृतं हरत्सु  
@@ -20,7 +20,7 @@ title: ०२९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/029/029_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/029/029_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्यामां रुचापि वयसापि तनुं तदानीं  
@@ -38,7 +38,7 @@ title: ०२९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/029/029_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/029/029_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 का त्वं मृगाक्षि विभजस्व सुधामिमामि  
@@ -56,7 +56,7 @@ title: ०२९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/029/029_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/029/029_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मोदात्सुधाकलशमेषु ददत्सु सा त्वं  
@@ -74,7 +74,7 @@ title: ०२९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/029/029_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/029/029_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अस्मास्वियं प्रणयिनीत्युसुरेषु तेषु  
@@ -92,7 +92,7 @@ title: ०२९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/029/029_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/029/029_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वत्तः सुधाहरणयोग्यफलं परेषु  
@@ -110,7 +110,7 @@ title: ०२९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/029/029_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/029/029_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वं कालनेमिमथ मालिसुखाञ्जघन्थ  
@@ -128,7 +128,7 @@ title: ०२९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/029/029_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/029/029_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 योषावपुर्दनुजमोहनमाहितं ते  
@@ -146,7 +146,7 @@ title: ०२९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/029/029_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/029/029_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आरामसीमनि च कन्दुकघातलीला  
@@ -164,7 +164,7 @@ title: ०२९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/029/029_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/029/029_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूयोऽपि विद्रुतवतीमुपधाव्य देवो  
