--- a/laxyam/padyam/purANam/nArAyaNIyam/030.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/030.md
@@ -2,7 +2,7 @@
 title: ०३०
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/030/030_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/030/030_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शक्रेण संयति हतोऽपि बलिर्महात्मा  
@@ -20,7 +20,7 @@ title: ०३०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/030/030_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/030/030_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पुत्रार्तिदर्शनवशाददितिर्विषण्णा  
@@ -38,7 +38,7 @@ title: ०३०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/030/030_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/030/030_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तस्यावधौ त्वयि निलीनमतेरमुष्याः  
@@ -56,7 +56,7 @@ title: ०३०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/030/030_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/030/030_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वं काश्यपे तपसि सन्निदधत्तदानीं  
@@ -74,7 +74,7 @@ title: ०३०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/030/030_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/030/030_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पुण्याश्रमं तमभिवर्षति पुष्पवर्षै  
@@ -92,7 +92,7 @@ title: ०३०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/030/030_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/030/030_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावत्प्रजापतिमुखैरुपनीय मौञ्जी  
@@ -110,7 +110,7 @@ title: ०३०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/030/030_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/030/030_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गात्रेण भाविमहिमोचितगौरवं प्राग्  
@@ -128,7 +128,7 @@ title: ०३०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/030/030_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/030/030_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तां नर्मदित्तरतटे हयमेधशाला  
@@ -146,7 +146,7 @@ title: ०३०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/030/030_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/030/030_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आनीतमाशु भृगुभिर्महसाभिभूतै  
@@ -164,7 +164,7 @@ title: ०३०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/030/030_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/030/030_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रह्लादवंशजतया क्रतुभिर्द्विजेषु  
