--- a/laxyam/padyam/purANam/nArAyaNIyam/031.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/031.md
@@ -2,7 +2,7 @@
 title: ०३१
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/031/031_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/031/031_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रीत्या दैत्यस्तव तनुमहःप्रेक्षणीत्सर्वथाऽपि  
@@ -20,7 +20,7 @@ title: ०३१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/031/031_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/031/031_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तामक्षीणां बलिगिरमुपाकर्ण्य कारुण्यपूर्णोऽ  
@@ -38,7 +38,7 @@ title: ०३१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/031/031_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/031/031_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विश्वेशं मां त्रिपदमिह किं याचसे बालिशस्त्वं  
@@ -56,7 +56,7 @@ title: ०३१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/031/031_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/031/031_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पादत्रय्या यदि न मुदितो विष्टपैर्नापि तुष्ये  
@@ -74,7 +74,7 @@ title: ०३१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/031/031_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/031/031_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 याचत्येवं यदि स भगवान्पूर्णकामोऽस्मि सोऽहं  
@@ -92,7 +92,7 @@ title: ०३१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/031/031_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/031/031_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निस्सन्देहं दितिकुलपतौ त्वय्यशेषार्पणं तद्  
@@ -110,7 +110,7 @@ title: ०३१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/031/031_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/031/031_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वत्पादाग्रं निजपदगतं पुण्डरीकोद्भवोऽसौ  
@@ -128,7 +128,7 @@ title: ०३१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/031/031_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/031/031_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावद्दैत्यास्त्वनुमतिमृते भर्तुरारब्धयुद्धा  
@@ -146,7 +146,7 @@ title: ०३१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/031/031_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/031/031_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पाशैर्बद्धं पतगपतिना दैत्यमुच्चैरवादी  
@@ -164,7 +164,7 @@ title: ०३१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/031/031_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/031/031_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दर्पोच्छित्त्यै विहितमखिलं दैत्य सिद्धोऽसि पुण्यै  
