--- a/laxyam/padyam/purANam/nArAyaNIyam/034.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/034.md
@@ -2,7 +2,7 @@
 title: ०३४
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/034/034_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/034/034_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गीर्वाणैरर्थ्यमानो दशमुखनिधनं कोसलेऽष्वृश्यषृङ्गे  
@@ -20,7 +20,7 @@ title: ०३४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/034/034_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/034/034_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कोदण्डी कौशिकस्य क्रतुवरमवितुं लक्ष्मणेनानुयातो  
@@ -38,7 +38,7 @@ title: ०३४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/034/034_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/034/034_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मारीचं द्रावयित्वा मखशिरसि शरैरन्यरक्षांसि निघ्नन्  
@@ -56,7 +56,7 @@ title: ०३४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/034/034_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/034/034_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आरुन्धाने रुषान्धे भृगुकुलतिलके संक्रमय्य स्वतेजो  
@@ -74,7 +74,7 @@ title: ०३४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/034/034_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/034/034_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तातोक्त्या यातुकामो वनमनुजवधूसंयुतश्चापधारः  
@@ -92,7 +92,7 @@ title: ०३४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/034/034_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/034/034_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रुत्वा पुत्रार्तिखिन्नं खलु भरतमुखात् स्वर्गयातं स्वतातं  
@@ -110,7 +110,7 @@ title: ०३४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/034/034_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/034/034_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नत्वाऽगस्त्यं समस्ताशरनिकरसपत्राकृतिं तापसेभ्यः  
@@ -128,7 +128,7 @@ title: ०३४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/034/034_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/034/034_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्राप्तायाः शूर्पणख्या मदनचलधृतेरर्थनैर्निस्सहात्मा  
@@ -146,7 +146,7 @@ title: ०३४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/034/034_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/034/034_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सोदर्याप्रोक्तवार्ताविवशदशमुखादिष्टमारीचमाया  
@@ -164,7 +164,7 @@ title: ०३४
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/034/034_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/034/034_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूयस्तन्वीं विचिन्वन्नहृत दशमुखस्त्वद्वधूं मद्वधेने  
