--- a/laxyam/padyam/purANam/nArAyaNIyam/035.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/035.md
@@ -2,7 +2,7 @@
 title: ०३५
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/035/035_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/035/035_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नीतस्सुग्रीवमैत्रीं तदनु दुन्दुभेः कायमुच्चैः  
@@ -20,7 +20,7 @@ title: ०३५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/035/035_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/035/035_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुग्रीवेणानुजोक्त्या सभयमभियता व्यूहितां वाहिनीं ता  
@@ -38,7 +38,7 @@ title: ०३५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/035/035_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/035/035_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वद्वार्ताकर्णनोद्यद्गरुदुरुजवसम्पातिसम्पातिवाक्य  
@@ -56,7 +56,7 @@ title: ०३५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/035/035_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/035/035_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वं सुग्रीवाङ्गदादिप्रबलकपिचमूचक्रविक्रान्तभूमी  
@@ -74,7 +74,7 @@ title: ०३५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/035/035_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/035/035_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कीशैराशान्तरोपाहृतगिरिनिकरैः सेतुमाधाप्य यातो  
@@ -92,7 +92,7 @@ title: ०३५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/035/035_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/035/035_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सौमित्रिस्त्वत्र शक्तिप्रहृतिगलदसुर्वातजानीतशैल  
@@ -110,7 +110,7 @@ title: ०३५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/035/035_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/035/035_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गृह्णन् जम्भारिसम्प्रेषितरथकवचौ रावणेनाभियुध्यन्  
@@ -128,7 +128,7 @@ title: ०३५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/035/035_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/035/035_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रीतो दिव्याभिषेकैरयुतसमधिकान्वत्सरान्पर्यरंसी  
@@ -146,7 +146,7 @@ title: ०३५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/035/035_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/035/035_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वाल्मीकेस्त्वत्सुतोद्गापितमधुरकृतेराज्ञया यज्ञवाटे  
@@ -164,7 +164,7 @@ title: ०३५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/035/035_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/035/035_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सोऽयं मर्त्यावतारस्तव खलु नियतं मर्त्यशिक्षार्थमेवं  
