--- a/laxyam/padyam/purANam/nArAyaNIyam/037.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/037.md
@@ -2,7 +2,7 @@
 title: ०३७
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/037/037_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/037/037_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सान्द्राननन्दतनो हरे ननु पुरा दैवासुरे सङ्गरे  
@@ -20,7 +20,7 @@ title: ०३७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/037/037_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/037/037_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हा हा दुर्जनभूरिभारमथितां पाथोनिधौ पातुकाम्  
@@ -38,7 +38,7 @@ title: ०३७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/037/037_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/037/037_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ऊचे चाम्बुजभूरमूनयि सुराः सत्यं धरित्र्या वचो  
@@ -56,7 +56,7 @@ title: ०३७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/037/037_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/037/037_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ते मुग्धानिलशालिदुग्धजलधेस्तीरं गताः सङ्गता  
@@ -74,7 +74,7 @@ title: ०३७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/037/037_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/037/037_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जाने दीनदशामहं दिविषदां भूमेश्च भीमैर्नृपै  
@@ -92,7 +92,7 @@ title: ०३७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/037/037_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/037/037_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रुत्वा कर्णरसायनं तव वचः सर्वेषु निर्वापित  
@@ -110,7 +110,7 @@ title: ०३७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/037/037_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/037/037_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उद्वाहावसितौ तदीयसहजः कंसोऽथ सम्मानय  
@@ -128,7 +128,7 @@ title: ०३७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/037/037_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/037/037_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गृह्णानश्चिकुरेषु तां खलमतिः शौरेश्चिरं सान्त्वनै  
@@ -146,7 +146,7 @@ title: ०३७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/037/037_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/037/037_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावत्त्वन्मनसैव नारदमुनिः प्रोचे स भोजेश्वरं  
@@ -164,7 +164,7 @@ title: ०३७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/037/037_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/037/037_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्राप्ते सप्तमगर्भतामहिपतौ त्वत्प्रेरणान्मायया  
