--- a/laxyam/padyam/purANam/nArAyaNIyam/038.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/038.md
@@ -2,7 +2,7 @@
 title: ०३८
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/038/038_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/038/038_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आनन्दरूप भगवन्नयि तेऽवतारे  
@@ -20,7 +20,7 @@ title: ०३८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/038/038_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/038/038_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आशासु शीतलतरासु पयोदतोयै  
@@ -38,7 +38,7 @@ title: ०३८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/038/038_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/038/038_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बाल्यसृशापि वपुषा दधुषा विभूती  
@@ -56,7 +56,7 @@ title: ०३८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/038/038_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/038/038_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वक्षःस्थलीसुखनिलानविलासिलक्ष्मी  
@@ -74,7 +74,7 @@ title: ०३८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/038/038_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/038/038_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शौरिस्तु धीरमुनिमण्डलचेतसोऽपि  
@@ -92,7 +92,7 @@ title: ०३८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/038/038_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/038/038_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 देव प्रसीद परपूरुष तापवल्ली  
@@ -110,7 +110,7 @@ title: ०३८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/038/038_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/038/038_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मात्रा च नेत्रसलिलास्तृतगात्रवल्ल्या  
@@ -128,7 +128,7 @@ title: ०३८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/038/038_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/038/038_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वत्प्रेरिस्ततदनु नन्दतनूजया ते  
@@ -146,7 +146,7 @@ title: ०३८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/038/038_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/038/038_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जाता तदा पुशुपसद्मनि योगनिद्रा  
@@ -164,7 +164,7 @@ title: ०३८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/038/038_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/038/038_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शेषेण भूरिफणवारितवारिणाऽथ  
