--- a/laxyam/padyam/purANam/nArAyaNIyam/040.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/040.md
@@ -2,7 +2,7 @@
 title: ०४०
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/040/040_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/040/040_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदनु नन्दममन्दशुभास्पदं नृपपुरीं करदानकृते गतम् ।  
@@ -16,7 +16,7 @@ title: ०४०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/040/040_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/040/040_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयि सखे तव बालकजन्म मां सुखयतेऽद्य निजात्मजजन्मवत् ।  
@@ -30,7 +30,7 @@ title: ०४०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/040/040_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/040/040_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इह च सन्त्यनिमित्तशतानि ते कटकसीम्ने ततो लघु गम्यताम् ।  
@@ -44,7 +44,7 @@ title: ०४०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/040/040_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/040/040_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अवसरे खलु तत्र च काचन व्रजपदे मधुराकृतिरङ्गना ।  
@@ -58,7 +58,7 @@ title: ०४०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/040/040_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/040/040_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सपदि सा हृतबालकचेतना निशिचरान्वयजा किल पूतना ।  
@@ -72,7 +72,7 @@ title: ०४०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/040/040_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/040/040_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ललितभावविलासहृतात्मभिर्युवतिभिः प्रतिरोद्धुमपारिता ।  
@@ -86,7 +86,7 @@ title: ०४०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/040/040_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/040/040_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समधिरुह्य तदङ्कमशङ्कितस्त्वमथ बालकलोपनरोषितः ।  
@@ -100,7 +100,7 @@ title: ०४०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/040/040_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/040/040_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 असुभिरेव समं धयति त्वयि स्तनमसौ स्तनितोपमनिस्वना ।  
@@ -114,7 +114,7 @@ title: ०४०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/040/040_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/040/040_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भयदघोषणभीषणविग्रहश्रवणदर्शनमोहितवल्लवे ।  
@@ -128,7 +128,7 @@ title: ०४०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/040/040_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/040/040_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भुवनमङ्कलनामभिरेव ते युवतिभिर्बहुधा कृतरक्षणः ।  
