--- a/laxyam/padyam/purANam/nArAyaNIyam/042.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/042.md
@@ -2,7 +2,7 @@
 title: ०४२
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कदापि जन्मर्क्षदिने तव प्रभो निमन्त्रितज्ञातिवधूमहीसुरा ।  
@@ -16,7 +16,7 @@ title: ०४२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततो भवत्त्राणनियुक्तबालकप्रभीतिसङ्क्रन्दनसङ्कुलारवैः ।  
@@ -30,7 +30,7 @@ title: ०४२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततस्तदाकर्णनसंभ्रमश्रमप्रकम्पिवक्षोजभरा व्रजाङ्गनाः ।  
@@ -44,7 +44,7 @@ title: ०४२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शिशोरहो किं किमभूदिति द्रुतं प्रधाव्य नन्दः पशुपाश्च भूसुराः ।  
@@ -58,7 +58,7 @@ title: ०४२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कस्को नु कौतस्कुत एष विस्मयो विशङ्कटं यच्छकटं विपाटितम् ।  
@@ -72,7 +72,7 @@ title: ०४२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुमारकस्यास्य पयोधरार्थिनः प्ररोदने लोलपदाम्बुजाहतम् ।  
@@ -86,7 +86,7 @@ title: ०४२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भिया तदा किञ्चिदजानतामिदं कुमारकाणामतिदुर्घटं वचः ।  
@@ -100,7 +100,7 @@ title: ०४२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रवालताम्रं किमिदं पदं क्षतं सरोजरम्यौ नु करौ विरोजितौ ।  
@@ -114,7 +114,7 @@ title: ०४२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अये सुतं देहि जगत्पतेः कृपातरङ्गपातात्परिपातमद्य मे ।  
@@ -128,7 +128,7 @@ title: ०४२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनोनिलीनः किल हन्तुमागतः सुरारिरेवं भवता विहिंसितः ।  
@@ -142,7 +142,7 @@ title: ०४२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/042/042_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रपूजितैस्तत्र ततो द्विजातिभिर्विशेषतो लम्भितमङ्गलाशिषः ।  
