--- a/laxyam/padyam/purANam/nArAyaNIyam/043.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/043.md
@@ -2,7 +2,7 @@
 title: ०४३
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/043/043_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/043/043_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वमेकदा गुरुमरुत्पुरनाथ वोढुं  
@@ -20,7 +20,7 @@ title: ०४३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/043/043_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/043/043_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावद्विदूरमुपकर्णितघोरघोष  
@@ -38,7 +38,7 @@ title: ०४३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/043/043_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/043/043_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उद्दामपांसुतिमिराहतदृष्टिपाते  
@@ -56,7 +56,7 @@ title: ०४३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/043/043_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/043/043_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावत्स दानववरोऽपि च दीनमूर्ति  
@@ -74,7 +74,7 @@ title: ०४३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/043/043_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/043/043_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रोदोपकर्णनवशादुपगम्य गेहं  
@@ -92,7 +92,7 @@ title: ०४३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/043/043_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/043/043_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रोदाकुलास्तदनु गोपगणा बहिष्ठ  
@@ -110,7 +110,7 @@ title: ०४३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/043/043_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/043/043_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ग्रावप्रपातपरिपिष्टगरिष्ठदेह  
@@ -128,7 +128,7 @@ title: ०४३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/043/043_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/043/043_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एकैकमाशु परिगृह्य निकामनन्द  
@@ -146,7 +146,7 @@ title: ०४३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/043/043_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/043/043_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूयोऽपि किन्नु कृणुमः प्रणतार्तिहारी  
@@ -164,7 +164,7 @@ title: ०४३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/043/043_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/043/043_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वातात्मकं दनुजमेवमयि प्रधून्वन्  
