--- a/laxyam/padyam/purANam/nArAyaNIyam/045.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/045.md
@@ -2,7 +2,7 @@
 title: ०४५
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/045/045_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/045/045_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयि सबल मुरारे पाणिजानुप्रचारैः  
@@ -20,7 +20,7 @@ title: ०४५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/045/045_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/045/045_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मृदु मृदु विहसन्तावुन्मिषद्दन्तवन्तौ  
@@ -38,7 +38,7 @@ title: ०४५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/045/045_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/045/045_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनुसरति जनौघे कौतुकव्याकुलाक्षे  
@@ -56,7 +56,7 @@ title: ०४५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/045/045_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/045/045_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दृतगतिषु पतन्तावुत्थितौ लिप्तपङ्कौ  
@@ -74,7 +74,7 @@ title: ०४५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/045/045_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/045/045_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्नुतकुचभरमङ्के धारयन्ती भवन्तं  
@@ -92,7 +92,7 @@ title: ०४५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/045/045_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/045/045_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदनु चरणचारी दारकैः साकमारा  
@@ -110,7 +110,7 @@ title: ०४५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/045/045_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/045/045_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हलधरसहितस्त्वं यत्र यत्रोपयातो  
@@ -128,7 +128,7 @@ title: ०४५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/045/045_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/045/045_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रतिनवनवनीतं गोपिकादत्तमिच्छन्  
@@ -146,7 +146,7 @@ title: ०४५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/045/045_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/045/045_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मम खलु बलिगेहे याचनं जातमास्ता  
@@ -164,7 +164,7 @@ title: ०४५
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/045/045_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/045/045_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तव दधिघृतमोषे घोषयोषाजनाना  
