--- a/laxyam/padyam/purANam/nArAyaNIyam/047.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/047.md
@@ -2,7 +2,7 @@
 title: ०४७
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/047/047_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/047/047_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एकदा दधिविमाथकारिणीं मातरं समुपसेदिवान् भवान् ।  
@@ -16,7 +16,7 @@ title: ०४७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/047/047_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/047/047_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अर्धपीतकुचकुड्मले त्वयि स्निग्धहासमधुराननाम्बुजे ।  
@@ -30,7 +30,7 @@ title: ०४७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/047/047_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/047/047_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सामिपीतरसभङ्गसङ्गतक्रोधभारपरिभूतचेतसा ।  
@@ -44,7 +44,7 @@ title: ०४७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/047/047_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/047/047_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उच्चल ध्वनितमुच्चकैस्तदा सन्निशम्य जननी समादृता ।  
@@ -58,7 +58,7 @@ title: ०४७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/047/047_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/047/047_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वेदमार्गपरिमार्गितं रुषा त्वामवीक्ष्य परिमार्गयन्त्यसौ ।  
@@ -72,7 +72,7 @@ title: ०४७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/047/047_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/047/047_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वां प्रगृह्य बत भीतिभावनाभासुराननसरोजमाशु सा ।  
@@ -86,7 +86,7 @@ title: ०४७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/047/047_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/047/047_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बन्धुमिच्छति यमेव सज्जनस्तं भवन्तमयि बन्धुमिच्छति ।  
@@ -100,7 +100,7 @@ title: ०४७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/047/047_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/047/047_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विस्मितोत्स्मितसखीजनेक्षितां स्विन्नसन्नवपुषं निरीक्ष्य ताम् ।  
@@ -114,7 +114,7 @@ title: ०४७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/047/047_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/047/047_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्थीयतां चिरमुलूखले खलेत्यागता भवनमेव सा यदा ।  
@@ -128,7 +128,7 @@ title: ०४७
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/047/047_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/047/047_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यद्यपाशसुगमो भवान्विभो संयतः किमु सपाशयानया ।  
