--- a/laxyam/padyam/purANam/nArAyaNIyam/049.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/049.md
@@ -2,7 +2,7 @@
 title: ०४९
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/049/049_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/049/049_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भवत्प्रभावाविदुरा हि गोपास्तरुप्रपातादिकमत्र गोष्ठे ।  
@@ -16,7 +16,7 @@ title: ०४९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/049/049_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/049/049_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तत्रोपनन्दाभिधगोपवर्यो जगौ भवत्प्रेरणयैव नूनम् ।  
@@ -30,7 +30,7 @@ title: ०४९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/049/049_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/049/049_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बृहद्वनं तत्खलु नन्दमुख्या विधाय गौष्ठीनमथ क्षणेन ।  
@@ -44,7 +44,7 @@ title: ०४९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/049/049_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/049/049_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनोमनोज्ञध्वनिधेनुपालीखुरप्रणादान्तरतो वधूभिः ।  
@@ -58,7 +58,7 @@ title: ०४९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/049/049_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/049/049_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निरीक्ष्य बृन्दावनमीश नन्दत्प्रसूनकुन्दप्रमुखद्रुमौघम् ।  
@@ -72,7 +72,7 @@ title: ०४९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/049/049_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/049/049_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नवाकनिर्व्युढनिवासभेदेष्वशेषगोपेषु सुखासितेषु ।  
@@ -86,7 +86,7 @@ title: ०४९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/049/049_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/049/049_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अरालमार्गागतनिर्मलापां मरालकुजाकृतनर्मलापाम् ।  
@@ -100,7 +100,7 @@ title: ०४९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/049/049_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/049/049_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मयूरकेकाशतलोभनीयं म्यूखमीलशबलं मणीनाम् ।  
@@ -114,7 +114,7 @@ title: ०४९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/049/049_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/049/049_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समं ततो गोपकुमारकैस्त्वं समन्ततो यत्र वनान्तमागाः ।  
@@ -128,7 +128,7 @@ title: ०४९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/049/049_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/049/049_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तथाविधेऽस्मिन्विपिने पशव्ये समुत्सुको वत्सगणप्रचारे ।  
