--- a/laxyam/padyam/purANam/nArAyaNIyam/051.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/051.md
@@ -2,7 +2,7 @@
 title: ०५१
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/051/051_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/051/051_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कदाचन व्रजशिशुभिः समं भवान् वनाशने विहितमतिः प्रगेतराम् ।  
@@ -16,7 +16,7 @@ title: ०५१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/051/051_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/051/051_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विनिर्यतस्तव चरणाम्बुजद्वयादुदञ्चितं त्रिभुवनपावनं रजः ।  
@@ -30,7 +30,7 @@ title: ०५१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/051/051_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/051/051_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रचारयत्यविरलशाद्वले तले पशून्विभो भवति समं कुमारकैः ।  
@@ -44,7 +44,7 @@ title: ०५१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/051/051_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/051/051_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 महाचलप्रतिमतनोर्गुहानिभप्रसारितप्रथितमुखस्य कानने ।  
@@ -58,7 +58,7 @@ title: ०५१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/051/051_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/051/051_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रमादतः प्रविशति पन्नगोदरं क्वथत्तनौ पशुपकुले सवात्सके ।  
@@ -72,7 +72,7 @@ title: ०५१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/051/051_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/051/051_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गलोदरे विपुलितवर्ष्मणा त्वया महोरगे लुठति निरुद्धमारुते ।  
@@ -86,7 +86,7 @@ title: ०५१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/051/051_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/051/051_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्षणं दिवि त्वदुपगमार्थमास्थितं महासुरप्रभवमहो महो महत् ।  
@@ -100,7 +100,7 @@ title: ०५१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/051/051_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/051/051_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सविस्मयैः कमलभवादिभिः सुरैरनुदृतस्तदनु गतः कुमारकैः ।  
@@ -114,7 +114,7 @@ title: ०५१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/051/051_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/051/051_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विषाणिकामपि मुरलीं नितम्बके निवेशयन्कबलधरः कराम्बुजे ।  
@@ -128,7 +128,7 @@ title: ०५१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/051/051_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/051/051_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुखाशनं त्विह तव गोपमण्डले मखाशनात्प्रियमिव देवमण्डले ।  
