--- a/laxyam/padyam/purANam/nArAyaNIyam/052.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/052.md
@@ -2,7 +2,7 @@
 title: ०५२
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/052/052_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/052/052_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अन्यावतारनिकरेष्वनिरीक्षितं ते  
@@ -20,7 +20,7 @@ title: ०५२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/052/052_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/052/052_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वत्सानवीक्ष्य विवशे पशुपोत्करे ता  
@@ -38,7 +38,7 @@ title: ०५२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/052/052_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/052/052_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वत्सायितस्तदनु गोपगणायितस्त्वं  
@@ -56,7 +56,7 @@ title: ०५२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/052/052_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/052/052_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वामेव शिक्यागवलादिमयं दधानो  
@@ -74,7 +74,7 @@ title: ०५२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/052/052_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/052/052_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जीवं हि किञ्चिदभिमानवशात्स्वकीयं  
@@ -92,7 +92,7 @@ title: ०५२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/052/052_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/052/052_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं प्रतिक्षणविजृम्भितहर्षभार  
@@ -110,7 +110,7 @@ title: ०५२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/052/052_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/052/052_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वर्षावधौ नवपुरातनवत्सपालान्  
@@ -128,7 +128,7 @@ title: ०५२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/052/052_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/052/052_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रत्येकमेव कमलापरिलालिताङ्गान्  
@@ -146,7 +146,7 @@ title: ०५२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/052/052_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/052/052_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नारायणाकृतिमसंख्यतमान्निरीक्ष्य  
@@ -164,7 +164,7 @@ title: ०५२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/052/052_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/052/052_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नश्यन्मदे तदनु विश्वपतिं मुहुस्त्वां  
