--- a/laxyam/padyam/purANam/nArAyaNIyam/053.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/053.md
@@ -2,7 +2,7 @@
 title: ०५३
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/053/053_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/053/053_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अतीत्य बाल्यं जगतां पते त्वम् उपेत्य पौगण्डवयो मनोज्ञम् ।  
@@ -16,7 +16,7 @@ title: ०५३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/053/053_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/053/053_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उपक्रमस्यानुगुणैव सेयं मरुत्पुराधीश तव प्रवृत्तिः ।  
@@ -30,7 +30,7 @@ title: ०५३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/053/053_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/053/053_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कदापि रामेण समं वनान्ते वनश्रियं वीक्ष्य चरन्सुखेन ।  
@@ -44,7 +44,7 @@ title: ०५३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/053/053_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/053/053_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्तालतालीनिवहे त्वदुक्त्या बलेन धूतेऽथ बलेन दोर्भ्याम् ।  
@@ -58,7 +58,7 @@ title: ०५३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/053/053_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/053/053_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समुद्यतो धैनुकपालनेऽहं वधं कथं धैनुकमद्य कुर्वे ।  
@@ -72,7 +72,7 @@ title: ०५३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/053/053_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/053/053_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदीयभृत्यानपि जम्बुकत्वेनोपागतानग्रजसंयुतस्त्वम् ।  
@@ -86,7 +86,7 @@ title: ०५३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/053/053_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/053/053_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विनिघ्नति त्वय्यथ जम्बुकौघं सनामकत्वाद्वरुणस्तदानीम् ।  
@@ -100,7 +100,7 @@ title: ०५३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/053/053_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/053/053_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तवावतारस्य फलं मुरारे सञ्जातमद्येति सुरैर्नुतस्त्वम् ।  
@@ -114,7 +114,7 @@ title: ०५३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/053/053_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/053/053_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मधुद्रवस्रुन्ति बृहन्ति तानि फलानि मेदोभरभृन्ति भुक्त्वा ।  
@@ -128,7 +128,7 @@ title: ०५३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/053/053_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/053/053_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हतो हतो धेनुक इत्युपेत्य फलान्यदद्भिर्मधुराणि लोकैः ।  
