--- a/laxyam/padyam/purANam/nArAyaNIyam/056.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/056.md
@@ -2,7 +2,7 @@
 title: ०५६
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/056/056_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/056/056_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रुचिरकम्पितकुण्डलमण्डलः सुचिरमीश ननर्तिथ पन्नगे ।  
@@ -16,7 +16,7 @@ title: ०५६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/056/056_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/056/056_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नमति यद्यदमुष्य शिरो हरे परिविहाय तदुन्नतमुन्नतम् ।  
@@ -30,7 +30,7 @@ title: ०५६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/056/056_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/056/056_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वदवभग्नविभुग्नफणागणे गलितशोणितशोणितपाथसि ।  
@@ -44,7 +44,7 @@ title: ०५६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/056/056_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/056/056_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयि पुरैव चिराय परिश्रुतत्वदनुभावविलीनहृदो हि ताः ।  
@@ -58,7 +58,7 @@ title: ०५६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/056/056_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/056/056_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 फणिवधूजनभक्तिविलोकनप्रविकसत्करुणाकुलचेतसा ।  
@@ -72,7 +72,7 @@ title: ०५६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/056/056_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/056/056_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रमणकं व्रजे वारिधिमध्यगं फणिरिपुर्न करोति विरोधिताम् ।  
@@ -86,7 +86,7 @@ title: ०५६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/056/056_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/056/056_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 फणिवधूजनदत्तमणिव्रजज्वलितहारदुकूलविभूषितः ।  
@@ -100,7 +100,7 @@ title: ०५६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/056/056_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/056/056_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निशि पुनस्तमसा व्रजमन्दिरं व्रजितुमक्षम एव जनोत्करे ।  
@@ -114,7 +114,7 @@ title: ०५६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/056/056_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/056/056_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रबुधितानथ पालय पालयेत्युदयदार्तरवान् पशुपालकान् ।  
@@ -128,7 +128,7 @@ title: ०५६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/056/056_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/056/056_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शिखिन वर्णत एव हि पीतता परिलसत्युधना क्रिययाऽप्यसौ ।  
