--- a/laxyam/padyam/purANam/nArAyaNIyam/059.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/059.md
@@ -2,7 +2,7 @@
 title: ०५९
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/059/059_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/059/059_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वद्वपुर्नवकलायकोमलं प्रेमदोहनमशेषमोहनम् ।  
@@ -16,13 +16,13 @@ title: ०५९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/059/059_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/059/059_02.mp3"></div>
 
 
 मन्मथोन्मथितमानसाः क्रमात्त्वद्विलोकनरतास्ततस्ततः ।  
 गोपिकास्तव न सेहिरे हरे काननोपगतिमप्यहर्मुखे ।। ५९२ ॥
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/059/059_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/059/059_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निर्गते भवति दत्तदृष्टयस्त्वद्गतेन मनसा मृगेक्षणाः ।  
@@ -36,7 +36,7 @@ title: ०५९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/059/059_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/059/059_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 काननान्तमितवान्भवानपि स्निग्धपादपतले मनोरमे ।  
@@ -50,7 +50,7 @@ title: ०५९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/059/059_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/059/059_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मारबाणधुतखेचरीकुलं निर्विकारपशुपक्षिमण्डलम् ।  
@@ -64,7 +64,7 @@ title: ०५९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/059/059_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/059/059_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वेणुरन्ध्रतरलाङ्गुलीदलं तालसञ्चलितपादपल्लवम् ।  
@@ -78,7 +78,7 @@ title: ०५९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/059/059_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/059/059_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निर्विशङ्कभवदङ्गदर्शिनीः खेचरीः खगमृगान्पशूनपि ।  
@@ -92,7 +92,7 @@ title: ०५९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/059/059_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/059/059_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आपिषेयमधरामृतं कदा वेणुभुक्तरसशेषमेकदा ।  
@@ -106,7 +106,7 @@ title: ०५९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/059/059_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/059/059_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रत्यहं च पुनरित्थमङ्गनाश्चित्तयोनिजनितादनुग्रहात् ।  
@@ -120,7 +120,7 @@ title: ०५९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/059/059_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/059/059_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रागस्तावज्जायते हि स्वभावान्मोक्षोपाये यत्नतः स्यान्न वा स्यात् ।  
