--- a/laxyam/padyam/purANam/nArAyaNIyam/061.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/061.md
@@ -2,7 +2,7 @@
 title: ०६१
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/061/061_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/061/061_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततश्च वृन्दावनतोऽतिदूरतो वनं गतस्त्वं खलु गोपगोकुलैः ।  
@@ -16,7 +16,7 @@ title: ०६१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/061/061_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/061/061_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततो निरीक्ष्याशरणे वनान्तरे किशोरलोकं क्षुधितं तृषाकुलम् ।  
@@ -30,7 +30,7 @@ title: ०६१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/061/061_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/061/061_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गतेष्वथो तेष्वभिधाय तेऽभिधां कुमारकेष्वोदनयाचिषु प्रभो ।  
@@ -44,7 +44,7 @@ title: ०६१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/061/061_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/061/061_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनादरात् खिन्नधियो हि बालकाः समाययुर्युक्तमिदं हि यज्वसु ।  
@@ -58,7 +58,7 @@ title: ०६१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/061/061_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/061/061_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निवेदयध्वं गृहिणीजनाय मां दिशेयुरन्नं करुणाकुला इमाः ।  
@@ -72,7 +72,7 @@ title: ०६१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/061/061_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/061/061_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गृहीतनाम्नि त्वयि सम्भ्रमाकुलाश्चतुर्विधं भोज्यरसं प्रगृह्य ताः ।  
@@ -86,7 +86,7 @@ title: ०६१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/061/061_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/061/061_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विलोलपिञ्छं चिकुरे कपोलयोः समुल्लसत्कुण्डलमार्द्रमीक्षिते ।  
@@ -100,7 +100,7 @@ title: ०६१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/061/061_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/061/061_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदा च काचित्त्वदुपागमोद्यता गृहीतहस्ता दयितेन यज्वना ।  
@@ -114,7 +114,7 @@ title: ०६१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/061/061_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/061/061_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आदाय भोज्यान्यनुगृह्य ताः पुनस्त्वदङ्गसङ्गस्पृहयोज्झतीर्गृहम् ।  
@@ -128,7 +128,7 @@ title: ०६१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/061/061_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/061/061_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निरूप्य दोषं निजमङ्गनाजने विलोक्य भक्तिं च पुनर्विचारिभिः ।  
