--- a/laxyam/padyam/purANam/nArAyaNIyam/066.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/066.md
@@ -2,7 +2,7 @@
 title: ०६६
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/066/066_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/066/066_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उपयातानां सुदृशां कुसुमायुधबाणपातविवशानाम् ।  
@@ -16,7 +16,7 @@ title: ०६६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/066/066_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/066/066_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गगनगतं मुनिनिवहं श्रावयितुं जगिथ कुलवधूधर्मम् ।  
@@ -30,7 +30,7 @@ title: ०६६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/066/066_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/066/066_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आकर्ण्य ते प्रतीपां वाणीमेणीदृशः परं दीनाः ।  
@@ -44,7 +44,7 @@ title: ०६६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/066/066_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/066/066_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तासां रुदितैर्लपितैः करुणाकुलमानसो मुरारे त्वम् ।  
@@ -58,7 +58,7 @@ title: ०६६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/066/066_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/066/066_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चन्द्रकरस्यन्दलसत्सुन्दरयमुनातटान्तवीथीषु ।  
@@ -72,7 +72,7 @@ title: ०६६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/066/066_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/066/066_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुमधुरनर्मालपनैः करसंग्रहणैश्च चुम्बनोल्लासैः ।  
@@ -86,7 +86,7 @@ title: ०६६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/066/066_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/066/066_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वासोहरणदिने यद्वासोहरणं प्रतिश्रुतं तासाम् ।  
@@ -100,7 +100,7 @@ title: ०६६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/066/066_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/066/066_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कन्दलितधर्मलेशं कुन्दमृदुस्मेरवक्त्रपाथोजम् ।  
@@ -114,7 +114,7 @@ title: ०६६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/066/066_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/066/066_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विरहेष्वङ्गारमयः शृङ्गारमयश्च सङ्गमेऽपि त्वम् ।  
@@ -128,7 +128,7 @@ title: ०६६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/066/066_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/066/066_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 राधातुङ्गपयोधरसाधुपरिरम्भलोलुपात्मानम् ।  
