--- a/laxyam/padyam/purANam/nArAyaNIyam/068.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/068.md
@@ -2,7 +2,7 @@
 title: ०६८
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/068/068_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/068/068_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तव विलोकनाद्गोपिकाजनाः प्रमदसंकुलाः पङ्कजेक्षण ।  
@@ -16,7 +16,7 @@ title: ०६८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/068/068_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/068/068_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदनु काचन त्वत्कराम्बुजं सपदि गृह्णती निर्विशङ्कितम् ।  
@@ -30,7 +30,7 @@ title: ०६८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/068/068_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/068/068_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तव विभो पुरा कोमलं भुजं निजगलान्तरे पर्यवेष्टयत् ।  
@@ -44,7 +44,7 @@ title: ०६८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/068/068_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/068/068_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अपगतत्रपा कापि कामिनी तव मुखाम्बुजात्पूगचर्वितम् ।  
@@ -58,7 +58,7 @@ title: ०६८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/068/068_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/068/068_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विकरुणो वने संविहाय मामपगतोऽसि का त्वामि स्पृशेत् ।  
@@ -72,7 +72,7 @@ title: ०६८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/068/068_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/068/068_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इति मुदाकुलैर्वल्लवीजनैः सममुपागतो यामुने तटे ।  
@@ -86,7 +86,7 @@ title: ०६८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/068/068_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/068/068_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कतिविधा कृपा केऽपि सर्वतो धृतदयोदयाः केचिदाश्रिते ।  
@@ -100,7 +100,7 @@ title: ०६८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/068/068_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/068/068_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयि कुमारिका नैव शङ्क्यतां कठिनता मयि प्रेमकातरे ।  
@@ -114,7 +114,7 @@ title: ०६८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/068/068_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/068/068_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयि निशम्यतां जीववल्लभाः प्रियतमो जनो नेदृशो मम ।  
@@ -128,7 +128,7 @@ title: ०६८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/068/068_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/068/068_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इति गिराधिकं मोदमेदुरैर्व्रजवधूजनैः साकमारमन् ।  
