--- a/laxyam/padyam/purANam/nArAyaNIyam/069.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/069.md
@@ -2,7 +2,7 @@
 title: ०६९
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 केशपाशधृतपिञ्छिकावितति सञ्चलन्मकरकुण्डलं  
@@ -20,7 +20,7 @@ title: ०६९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावदेव कृतमण्डने कलितकञ्चुलीककुचमण्डले  
@@ -38,7 +38,7 @@ title: ०६९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वासुदेव तव भासमानमिह रासकेलिरससौरभं  
@@ -56,7 +56,7 @@ title: ०६९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वेणुनादकृततानदानकलगानरागगतियोजना  
@@ -74,7 +74,7 @@ title: ०६९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रद्धया विरचितानुगानकृततारतारमधुरस्वरे  
@@ -92,7 +92,7 @@ title: ०६९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्विन्नसन्नतनुवल्लरी तदनु कापि नाम पशुपाङ्गना  
@@ -110,7 +110,7 @@ title: ०६९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कापि गण्डभुवि सन्निधाय निजगण्डमाकुलितकुण्डलं  
@@ -128,7 +128,7 @@ title: ०६९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गानमीश विरतं क्रमेण किल वाद्यमेलनमुपारतं  
@@ -146,7 +146,7 @@ title: ०६९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मोदसीम्नि भुवनं विलाप्य विहृतिं समाप्य च ततो विभो  
@@ -164,7 +164,7 @@ title: ०६९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 केलिभेदपरिलोलिताभिरतिलालिताभिरबलालिभिः  
@@ -182,7 +182,7 @@ title: ०६९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/069/069_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कामिनीरिति हि यामिनीषु खलु कामनीयकनिधे भवान्  
