--- a/laxyam/padyam/purANam/nArAyaNIyam/072.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/072.md
@@ -2,7 +2,7 @@
 title: ०७२
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कंसोऽथ नारदगिरा व्रजवासिनं त्वामाकर्ण्य दीर्णहृदयः स हि गान्दिनेयम् ।  
@@ -16,7 +16,7 @@ title: ०७२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अक्रूर एष भवदङ्घ्रिपरश्चिराय  
@@ -34,7 +34,7 @@ title: ०७२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सोऽयं रथेन सुकृती भवतो निवासं  
@@ -52,7 +52,7 @@ title: ०७२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 द्रक्ष्यामि देवशतगीतगतिं पुमांसं  
@@ -70,7 +70,7 @@ title: ०७२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूयः क्रमादभिविशन्भवदङ्घ्रिपूतं  
@@ -88,7 +88,7 @@ title: ०७२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पश्यन्नवन्दत भवद्विहृतिस्थलानि  
@@ -106,7 +106,7 @@ title: ०७२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सायं स गोपभवनानि भवच्चरित्र  
@@ -124,7 +124,7 @@ title: ०७२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावद्ददर्श पशुदोहविलोकलोलं  
@@ -142,7 +142,7 @@ title: ०७२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सायन्तनाप्लवविशेषविविक्तगात्रौ द्वौ पीतनीलरुचिराम्बरलोभनीयौ ।  
@@ -156,7 +156,7 @@ title: ०७२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दूराद्रथात्समवरुह्य नमन्तमेनमुत्थाप्य भक्तकुलमौलिमथोपगूहन् ।  
@@ -170,7 +170,7 @@ title: ०७२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नन्देन साकममितादरमर्चयित्वा तं यादवं तदुदितां निशमय्य वार्ताम् ।  
@@ -184,7 +184,7 @@ title: ०७२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/072/072_12.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_12.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चन्द्रागृहे किमुत चन्द्रभगागृहे नु  
