--- a/laxyam/padyam/purANam/nArAyaNIyam/079.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/079.md
@@ -2,7 +2,7 @@
 title: ०७९
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बलसमेतबलानुगतो भवान् पुरमगाहत भीष्मकमानितः ।  
@@ -16,7 +16,7 @@ title: ०७९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भुवनकान्तमवेक्ष्य भवद्वपुर्नृपसुतस्य निशम्य च चेष्टितम् ।  
@@ -30,7 +30,7 @@ title: ०७९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदनु वन्दितुमिन्दुमुखी शिवां विहितमङ्गलभूषणभासुरा ।  
@@ -44,7 +44,7 @@ title: ०७९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुलवधूभिरुपेत्य कुमारिका गिरिसुतां परिपूज्य च सादरम् ।  
@@ -58,7 +58,7 @@ title: ०७९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समवलोक कुतुहलसङ्कुले नृपकुले निभृतं त्वयि च स्थिते ।  
@@ -72,7 +72,7 @@ title: ०७९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भुवनमोहनरूपरुचा तदा विवशिताखिलराजकदम्बया ।  
@@ -86,7 +86,7 @@ title: ०७९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्व तु गमिष्यसि चन्द्रमुखीति तां सरसमेत्य करेण हरन् क्षणात् ।  
@@ -100,7 +100,7 @@ title: ०७९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्वनु गतः पशुपाल इति क्रुधा कृतरणा यदुभिश्च जिता नृपाः ।  
@@ -114,7 +114,7 @@ title: ०७९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदनु रुक्मिणमागतमाहवे वधमुपेक्ष्य निबध्य विरूपयन् ।  
@@ -128,7 +128,7 @@ title: ०७९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नवसमागमलज्जितमानसां प्रणयकौतुकजृम्भितमन्मथाम् ।  
@@ -142,7 +142,7 @@ title: ०७९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विविधनर्मभिरेवमहर्निशं प्रमदमाकलयन्पुनरेकदा ।  
@@ -156,7 +156,7 @@ title: ०७९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/079/079_12.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_12.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदधिकैरथ लालनकौशलैः प्रणयिनीमधिकं रमयन्निमाम् ।  
