--- a/laxyam/padyam/purANam/nArAyaNIyam/080.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/080.md
@@ -2,7 +2,7 @@
 title: ०८०
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/080/080_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सत्राजितस्त्वमथ लुब्धवदर्कलब्धं  
@@ -20,7 +20,7 @@ title: ०८०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/080/080_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अदत्तं तं तुभ्यं मणिवरमनेनाल्पमनसा  
@@ -38,7 +38,7 @@ title: ०८०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/080/080_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शशंसुः सत्राजिद्गिरमनु जनास्त्वां मणिहरं  
@@ -56,7 +56,7 @@ title: ०८०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/080/080_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भवन्तमवितर्कयन्नतिवयाः स्वयं जाम्बवान्  
@@ -74,7 +74,7 @@ title: ०८०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/080/080_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बुद्ध्वाथ तेन दत्तां नवरमणीं वरमणीं च परिगृह्णन् ।  
@@ -88,7 +88,7 @@ title: ०८०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/080/080_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदनु स खलु व्रीडालोलो विलोलविलोचनां  
@@ -106,7 +106,7 @@ title: ०८०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/080/080_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 व्रीलाकुलां रमयति त्वयि सत्यभामां  
@@ -124,7 +124,7 @@ title: ०८०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/080/080_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शोकात्कुरूनुपगतामवलोक्य कान्तां  
@@ -142,7 +142,7 @@ title: ०८०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/080/080_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अक्रूर एष भगवन् भवदिच्छयैव  
@@ -160,7 +160,7 @@ title: ०८०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/080/080_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भक्तस्त्वयि स्थिरतरः स हि गान्दिनेय  
@@ -178,7 +178,7 @@ title: ०८०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/080/080_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यातं भयेन कृतवर्मयुतं पुनस्त  
