--- a/laxyam/padyam/purANam/nArAyaNIyam/081.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/081.md
@@ -2,7 +2,7 @@
 title: ०८१
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/081/081_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/081/081_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्निग्धां मुग्धां सततमपि तां लालयन् सत्यभामां  
@@ -20,7 +20,7 @@ title: ०८१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/081/081_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/081/081_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भद्रां भद्रां भवदवरजां कौरवेणार्थ्यमानां  
@@ -38,7 +38,7 @@ title: ०८१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/081/081_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/081/081_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तत्र क्रीडन्नपि च यमुनाकूलदृष्टां गृहीत्वा  
@@ -56,7 +56,7 @@ title: ०८१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/081/081_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/081/081_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सत्यां गत्वा पुनरुदवहो नग्नजिन्नन्दनां तां  
@@ -74,7 +74,7 @@ title: ०८१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/081/081_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/081/081_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पार्थाद्यैरप्यकृतलवनं तोयमात्राभिलक्ष्यं  
@@ -92,7 +92,7 @@ title: ०८१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/081/081_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/081/081_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्मृतायातं पक्षिप्रवरमधिरूढस्त्वमगमो  
@@ -110,7 +110,7 @@ title: ०८१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/081/081_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/081/081_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मुरस्त्वां पञ्चास्यो जलधिवनमध्यादुदपतत्  
@@ -128,7 +128,7 @@ title: ०८१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/081/081_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/081/081_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्तुतो भूम्या राज्यं सपदि भगदत्तेऽस्य तनये  
@@ -146,7 +146,7 @@ title: ०८१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/081/081_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/081/081_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भौमापाहृतकुण्डलं तददितेर्दातुं प्रयातो दिवं  
@@ -164,7 +164,7 @@ title: ०८१
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/081/081_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/081/081_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कल्पद्रुं सत्यभामाभवनभुवि सृजन्द्व्यष्टसाहस्रयोषाः  
