--- a/laxyam/padyam/purANam/nArAyaNIyam/083.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/083.md
@@ -2,7 +2,7 @@
 title: ०८३
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/083/083_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/083/083_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रामेऽथगोकुलगते प्रमदाप्रसक्ते हूतानुपेतयमुनादमने मदान्धे ।  
@@ -16,7 +16,7 @@ title: ०८३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/083/083_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/083/083_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नारायणोऽहमवतीर्ण इहास्मि भूमौ  
@@ -34,7 +34,7 @@ title: ०८३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/083/083_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/083/083_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दूतेऽथ यातवति यादवसैनिकस्त्वं  
@@ -52,7 +52,7 @@ title: ०८३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/083/083_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/083/083_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कालायसं निजसुदर्शनमस्यतोऽस्य  
@@ -70,7 +70,7 @@ title: ०८३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/083/083_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/083/083_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जाड्येन बालकगिराऽपि किलाहमेव  
@@ -88,7 +88,7 @@ title: ०८३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/083/083_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/083/083_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 काशीश्वरस्य तनयोऽथ सुदक्षिणाख्यः शर्वं प्रपूज्य भवते विहिताभिचारः ।  
@@ -102,7 +102,7 @@ title: ०८३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/083/083_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/083/083_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तालप्रमाणचरणामखिलं दहन्तीं  
@@ -120,7 +120,7 @@ title: ०८३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/083/083_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/083/083_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अभ्यापतत्यमितधाम्नि भवन्महास्त्रे हा हेति विद्रुतवती खलु घोरकृत्या ।  
@@ -134,7 +134,7 @@ title: ०८३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/083/083_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/083/083_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स खलु विविदो रक्षोघाते कृतोपकृतिः पुरा  
@@ -152,7 +152,7 @@ title: ०८३
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/083/083_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/083/083_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 साम्बं कौरव्यपुत्रीहरणनियमितं सान्त्वनार्थी कुरूणां  
