--- a/laxyam/padyam/purANam/nArAyaNIyam/086.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/086.md
@@ -2,7 +2,7 @@
 title: ०८६
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/086/086_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 साल्वो भैष्मीविवाहे यदुबलविजितश्चन्द्रचूडाद्विमानं  
@@ -20,7 +20,7 @@ title: ०८६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/086/086_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तावत्त्वं रामशाली त्वरितमुपगतः खण्डितप्रायसैन्यं  
@@ -38,7 +38,7 @@ title: ०८६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/086/086_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्षिप्त्वा सौभं गदाचूर्णितमुदकनिधौ मङ्क्षु साल्वेऽपि चक्रे  
@@ -56,7 +56,7 @@ title: ०८६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/086/086_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वय्यायातेऽथ जाते किल कुरुसदसि द्यूतके संयतायाः  
@@ -74,7 +74,7 @@ title: ०८६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/086/086_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 युद्धोद्योगेऽथ मन्त्रे मिलति सति वृतः फल्गुनेन त्वमेकः  
@@ -92,7 +92,7 @@ title: ०८६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/086/086_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जिष्णोस्त्वं कृष्ण सूतः खलु समरमुखे बन्धुघाते दयालुं  
@@ -110,7 +110,7 @@ title: ०८६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/086/086_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भक्तोत्तंसेऽथ भीष्मे तव धरणिभरक्षेपकृत्यैकसक्ते  
@@ -128,7 +128,7 @@ title: ०८६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/086/086_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 युद्धे द्रोणस्य हस्तिस्थिररणभगदत्तेरितं वैष्णवास्त्रं  
@@ -146,7 +146,7 @@ title: ०८६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/086/086_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 युद्धादौ तीर्थगामी स खलु हलधरो नैमिशक्षेत्रमृच्छ  
@@ -164,7 +164,7 @@ title: ०८६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/086/086_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 संसुप्तद्रौपदेयक्षपणहतधियं द्रौणिमेत्य त्वदुक्त्या  
@@ -182,7 +182,7 @@ title: ०८६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/086/086_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 धर्मौघं धर्मसूनोरभिदधदखिलं छन्दमृत्युः स भीष्म  
