--- a/laxyam/padyam/purANam/nArAyaNIyam/088.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/088.md
@@ -2,7 +2,7 @@
 title: ०८८
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/088/088_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रागेवाचार्यपुत्राहृतिनिशमनया स्वीयषट्सूनुवीक्षां  
@@ -20,7 +20,7 @@ title: ०८८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/088/088_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रुतदेव इति श्रुतं द्विजेन्द्रं बहुलाश्वं नृपतिं च भक्तिपूर्णम् ।  
@@ -34,7 +34,7 @@ title: ०८८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/088/088_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गच्छन्द्विमूर्तिरुभयोर्युगपन्निकेतम्  
@@ -52,7 +52,7 @@ title: ०८८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/088/088_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूयोऽथ द्वारवत्यां द्विजतनयमृतिं तत्प्रलापानपि त्वं  
@@ -70,7 +70,7 @@ title: ०८८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/088/088_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नष्टा अष्टास्य पुत्राः पुनरपि तव तूपेक्षया कष्टवादः  
@@ -88,7 +88,7 @@ title: ०८८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/088/088_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मानी स त्वामपृष्ट्वा द्विजनिलयगतो बाणजालैर्महास्त्रै  
@@ -106,7 +106,7 @@ title: ०८८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/088/088_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सार्धं तेन प्रतीचीं दिशमतिजविना स्यन्दनेनाभियातो  
@@ -124,7 +124,7 @@ title: ०८८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/088/088_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तत्रासीनं भुजङ्गाधिपशयनतले दिव्यभूषायुधाद्यै  
@@ -142,7 +142,7 @@ title: ०८८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/088/088_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 युवां मामेवद्वावधिकविवृतान्तर्हिततया  
@@ -160,7 +160,7 @@ title: ०८८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/088/088_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं नानाविहारैर्जगदभिरमयन्वृष्णिवंशं प्रपुष्ण  
@@ -178,7 +178,7 @@ title: ०८८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_11.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/088/088_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रायेण द्वारवत्यामवृतदयि तदी नारदस्त्वद्रसार्द्र  
@@ -196,7 +196,7 @@ title: ०८८
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/088/088_12.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/088/088_12.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सोऽयं कृष्णावतारो जयति तव विभो यत्र सौहार्दभीति  
