--- a/laxyam/padyam/purANam/nArAyaNIyam/090.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/090.md
@@ -2,7 +2,7 @@
 title: ०९०
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/090/090_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/090/090_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वृकभृगुसुनिमोहिन्यम्बरीषादिवृत्ते  
@@ -20,7 +20,7 @@ title: ०९०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/090/090_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/090/090_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मूर्तित्रयेश्वरसदाशिवपञ्चकं यत् प्राहुः परात्मवपुरेव सदाशिवोऽस्मिन् ।  
@@ -34,7 +34,7 @@ title: ०९०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/090/090_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/090/090_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तत्रापि सात्त्विकतनुं तव विष्णुमाहु  
@@ -52,7 +52,7 @@ title: ०९०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/090/090_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/090/090_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तं च त्रिमूर्त्यतिगतं पुरपूरुषं त्वां  
@@ -70,7 +70,7 @@ title: ०९०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/090/090_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/090/090_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रीशङ्करोऽपि भगवान्सकलेषु तावत्  
@@ -88,7 +88,7 @@ title: ०९०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/090/090_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/090/090_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मूर्तित्रयातिगमुवाच च मन्त्रशास्त्र  
@@ -106,7 +106,7 @@ title: ०९०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/090/090_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/090/090_07.mp3"></div>
 
 
 समस्तसारे च पुराणसंग्रहे विसंशयं त्वन्महिमैव वर्ण्यते ।  
@@ -116,7 +116,7 @@ title: ०९०
 तस्यैव नाम हरिशर्वमुखं जगाद  
 श्रीमाधवः शिवपरोऽपि पुराणसारे ॥ ९०८॥
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/090/090_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/090/090_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ये स्वप्रकृत्यनुगुणा गिरिशं भजन्ते  
@@ -134,7 +134,7 @@ title: ०९०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/090/090_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/090/090_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूतार्थकीर्तिरनुवादविरुद्धवादौ  
@@ -152,7 +152,7 @@ title: ०९०
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/090/090_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/090/090_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यत्किञ्चिदप्यविदुषापि विभो मयोक्तं  
