--- a/laxyam/padyam/purANam/nArAyaNIyam/092.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/092.md
@@ -2,7 +2,7 @@
 title: ०९२
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/092/092_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/092/092_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वैदैस्सर्वाणि कर्माण्यफलपरतया वर्णितानीति बुध्वा  
@@ -20,7 +20,7 @@ title: ०९२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/092/092_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/092/092_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यस्त्वन्यः कर्मयोगस्तव भजनमयस्तत्र चाभीष्टमूर्तिं  
@@ -38,7 +38,7 @@ title: ०९२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/092/092_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/092/092_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्त्रीशूद्रास्त्वत्कथादिश्रवणविरहिता आसतां ते दयार्हा  
@@ -56,7 +56,7 @@ title: ०९२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/092/092_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/092/092_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पपोऽयं कृष्ण रामेत्यभिलपति निजं गूहितुं दुश्चारित्रं  
@@ -74,7 +74,7 @@ title: ०९२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/092/092_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/092/092_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्वेतच्छायं कृते त्वां मुनिवरवपुषं प्रीणयन्ते तपोभि  
@@ -92,7 +92,7 @@ title: ०९२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/092/092_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/092/092_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सोऽयं कालेयकालो जयति मुररिपो यत्र सङ्कीर्तनाद्यै  
@@ -110,7 +110,7 @@ title: ०९२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/092/092_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/092/092_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भक्तास्तावत्कलौ स्युर्द्रमिलभुवि ततो भूरिशस्तत्र चोच्चैः  
@@ -128,7 +128,7 @@ title: ०९२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/092/092_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/092/092_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दृष्ट्वा धर्मद्रुहं तं कलिमपकरुणं प्राङ्महीक्षित्परीक्षि  
@@ -146,7 +146,7 @@ title: ०९२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/092/092_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/092/092_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गङ्गा गीता च गायत्र्यपि च तुलसिका गोपिकाचन्दनं तत्  
@@ -164,7 +164,7 @@ title: ०९२
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/092/092_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/092/092_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 देवर्षीणां पितॄणामपि न पुनरृणी किङ्गरो वा स भूमन्  
