--- a/laxyam/padyam/purANam/nArAyaNIyam/096.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/096.md
@@ -2,7 +2,7 @@
 title: ०९६
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/096/096_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/096/096_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वं हि ब्रह्मैव साक्षात् परमुरुमहिमन्नक्षराणामकार  
@@ -20,7 +20,7 @@ title: ०९६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/096/096_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/096/096_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ब्रह्मण्यानां बलिस्त्वं क्रतुषु च जपयज्ञोऽसो वीरेषु पार्थो  
@@ -38,7 +38,7 @@ title: ०९६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/096/096_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/096/096_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 धर्मं वर्णाश्रमाणां श्रुतिपथविहितं त्वत्परत्वेन भक्त्या  
@@ -56,7 +56,7 @@ title: ०९६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/096/096_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/096/096_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ज्ञानं कर्मापि भक्तिस्त्रितयमिह भवत्प्रापकं तत्र ताव  
@@ -74,7 +74,7 @@ title: ०९६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/096/096_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/096/096_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ज्ञानं त्वद्भक्ततां वा लघु सुकृतवशान्मर्त्यलोके लभन्ते  
@@ -92,7 +92,7 @@ title: ०९६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/096/096_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/096/096_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अव्यक्तं मार्गयन्तः श्रुतिभिरपि नयैः केवलज्ञानलुब्धाः  
@@ -110,7 +110,7 @@ title: ०९६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/096/096_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/096/096_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ज्ञानायैवातियत्नं मुनिरपवदते ब्रह्मतत्त्वं तु श्रुण्वन्  
@@ -128,7 +128,7 @@ title: ०९६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/096/096_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/096/096_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निर्विण्णः कर्ममार्गे खलु विषमतमे त्वत्कथादौ च गाढं  
@@ -146,7 +146,7 @@ title: ०९६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/096/096_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/096/096_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कश्चित्क्लेशार्जितार्थक्षयविमलमतिर्नुद्यमानो जनौधैः  
@@ -164,7 +164,7 @@ title: ०९६
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/096/096_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/096/096_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ऐलः प्रागुर्वशीं प्रत्यतिविवशमनाः सेवमानश्चिरं तां  
