--- a/laxyam/padyam/purANam/nArAyaNIyam/099.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/099.md
@@ -2,7 +2,7 @@
 title: ०९९
 
 ---
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/099/099_01.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/099/099_01.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विष्णोर्वीर्याणि को वा कथयतु धरणेः कश्च रेणून्मिमीते  
@@ -20,7 +20,7 @@ title: ०९९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/099/099_02.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/099/099_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आद्यायाशेषकर्त्रे प्रतिनिमिषनवीनाय भर्त्रे विभूते  
@@ -38,7 +38,7 @@ title: ०९९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/099/099_03.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/099/099_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हे स्तोतारः कवीन्द्रास्तमिह खलु यथा चेतयध्वे तथैव  
@@ -56,7 +56,7 @@ title: ०९९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/099/099_04.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/099/099_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विष्णोः कर्माणि सम्पश्यत मनसि सदा यैः स धर्मानबध्ना/  
@@ -74,7 +74,7 @@ title: ०९९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/099/099_05.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/099/099_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नो जातो जायमानोऽपि च समधिगतस्त्वन्महिम्नोऽवसानं  
@@ -92,7 +92,7 @@ title: ०९९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/099/099_06.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/099/099_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आपः सृष्ट्यादिजन्याः प्रथममयि विभो गर्भदेशे दधुस्त्वां  
@@ -110,7 +110,7 @@ title: ०९९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/099/099_07.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/099/099_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हे लोका विष्णुरेतद्भवनमजनयत्तन्न जानीथ यूयं  
@@ -128,7 +128,7 @@ title: ०९९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/099/099_08.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/099/099_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मूर्ध्नामक्षणां पदानां वहसि खलु सहस्राणि सम्पूर्य विश्वं  
@@ -146,7 +146,7 @@ title: ०९९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/099/099_09.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/099/099_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यत्तु त्रैलोक्यरूपं दधदपि च ततोनिर्गतानन्तशुद्ध  
@@ -164,7 +164,7 @@ title: ०९९
 
 
 
-<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://sanskritdocuments.org/sites/completenarayaneeyam/SoundFiles/099/099_10.mp3"></div>
+<div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/099/099_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अव्यक्तं ते स्वरूपं दुरधिगमतमं तत्तु शुद्धैकसत्त्वं  
